--- a/book/basics/concrete/concrete_construction_applications.ipynb
+++ b/book/basics/concrete/concrete_construction_applications.ipynb
@@ -10,7 +10,7 @@
     ":class: tip\n",
     "Beton als conventioneel bouwmateriaal (Concrete as conventional building material). In Cement 2002 no. 4 by Prof. dr. Ir. Joost Walraven\n",
     "`````\n",
-    "The first applications of plain unreinforced concrete were constructed by the Romans as massive structures. The concrete was only loaded in compression. The material had a strong heterogeneous character and had very low strength. Measurements from a city wall near Cologne which was built around 50 A.D. indicate a stenght of about 10 N/mm2. Methods to increase the strength of the concrete have always been a lower water-cement ratio and more closely packed aggregates. In practice the minimum for the water cement ratio lies at 0.4 as lower values decrease the workability of the concrete\n",
+    "The first applications of plain unreinforced concrete were constructed by the Romans as massive structures. The concrete was only loaded in compression. The material had a strong heterogeneous character and had very low strength. Measurements from a city wall near Cologne which was built around 50 A.D. indicate a stenght of about 10 N/mm2. Methods to increase the strength of the concrete have always been a lower water-cement ratio and more closely packed aggregates. In practice the minimum for the water cement ratio lies at 0.4 as lower values decrease the workability of the concrete.\n",
     "\n",
     "```{figure} Images/Oosterscheldekering.png\n",
     "---\n",
@@ -18,7 +18,7 @@
     "Oosterscheldekering\n",
     "```\n",
     "For the pylons in the Oosterschelde storm surge barrier (1979-1981) and the accompanying treshold beams, upper beams and hammerheads a concrete strength of B25 (now C20/25 \n",
-    "red.) was used to obtain sufficient workability. Until about 10 year ago the realiztation of B45 (now C35/45 red.) on site was a great achievement. Meanwhile the understanding of concrete technology has improved significantly which has led to revolutionary developments. In 1990 it was discovered that the addition of silicafume to concrete resulted in a significant strength increase. This a important effect on the internal force distribution in the concrete \n",
+    "red.) was used to obtain sufficient workability. Until about 10 year ago the realiztation of B45 (now C35/45 red.) on site was a great achievement. Meanwhile the understanding of concrete technology has improved significantly which has led to revolutionary developments. In 1990 it was discovered that the addition of silicafume to concrete resulted in a significant strength increase. This a important effect on the internal force distribution in the concrete.\n",
     "```{figure} Images/2nd_Sticht_bridge.png\n",
     "---\n",
     "---\n",
