--- a/book/basics/steel/explanation_cross_sectional_quantities.ipynb
+++ b/book/basics/steel/explanation_cross_sectional_quantities.ipynb
@@ -10,6 +10,7 @@
     "```{figure} Images/moment_of_inertia.png\n",
     "---\n",
     "align: left\n",
+    "scale: 50%\n",
     "---\n",
     "Castellated beams.\n",
     "```\n",
@@ -32,6 +33,7 @@
     "```{figure} Images/radius_of_gyration.png\n",
     "---\n",
     "align: left\n",
+    "scale: 50%\n",
     "---\n",
     "Radius of gyration.\n",
     "```\n",
