--- a/book/basics/steel/hollow_sections.ipynb
+++ b/book/basics/steel/hollow_sections.ipynb
@@ -9,12 +9,8 @@
     "Structural design is an iterative process where attention to function, material, force and form is essential. Available production techniques of steel profiles offer a wide range of possibities for a more free form.\n",
     "\n",
     "Hollow sections became possible because of the fast developments in the production of seamless and welded tubes. Plates, rolled sections and tubular sections can be rolled or folded in every possible form. These possibities bring the structural advantages of the tubular sections within reach for multiple forms of construction.\n",
-    "\n",
     "In nature, various examples show the excellent properties of hollow sections when loaded in compression, torsion and bending in multiple directions. Especially torsion can be taken up easily in comparison with open profiles.\n",
-    "\n",
-    "Seamless rolled tubes are at the moment only applied in structures where very high structural demands are stated. The mechanical properties of these tubular sections can be \n",
-    "improved after production by heat treatment (annealing).\n",
-    "\n",
+    "Seamless rolled tubes are at the moment only applied in structures where very high structural demands are stated. The mechanical properties of these tubular sections can be improved after production by heat treatment (annealing).\n",
     "For ordinary structure, mostly welded hollow sections are used. By means of automated welding processes, these tubular sections are provided with a longitudinal or spiral weld. The ends of the hollow sections can be provided with the necessary connection provisions. \n",
     "\n",
     "Using the current production techniques the structural engineer only needs to find the correct fabrication technique, structural shape, material quality, conservation and erection method to make a structural design [^1].\n",
