--- a/book/basics/steel/integrated_beams.ipynb
+++ b/book/basics/steel/integrated_beams.ipynb
@@ -8,13 +8,13 @@
     "\n",
     "## Introduction\n",
     "\n",
+    "Integrated beams, in combination with hollow core slabs, precast concrete planks or composite floors, form a solid floor construction. The beams are completely integrated in the floor, thereby reducing structural height. The welded beams allow for a fast and easy erection. A wide range of different types is available. Examples are the top hat beams (THQ-beams), SFB- beams and IFB-beams [^1].\n",
+    "\n",
     "```{figure} Images/integrated_beams.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
     "Two types of top hat beams (SFB on the left and IFB on the right.)\n",
     "```\n",
-    "Integrated beams, in combination with hollow core slabs, precast concrete planks or composite floors, form a solid floor construction. The beams are completely integrated in the floor, thereby reducing structural height. The welded beams allow for a fast and easy erection. A wide range of different types is available. Examples are the top hat beams (THQ-beams), SFB- beams and IFB-beams [^1].\n",
     "\n",
     "## Possible shapes\n",
     "A wide range of integrated beams is available. Each with is own specific (brand)name. In general, the beams can be divided between open sections and closed sections.\n",
@@ -84,8 +84,8 @@
     "\n",
     "```{figure} Images/integrated_SFB.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
+    "Integrated SFB\n",
     "```\n",
     "The tables depicted below are a selection of the available sections [^1].\n",
     "\n",
@@ -105,8 +105,8 @@
     "\n",
     "```{figure} Images/integrated_IFB.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
+    "Integrated IFB\n",
     "```\n",
     "The tables depicted below are a selection of the available sections [^1].\n",
     "\n",
@@ -135,8 +135,8 @@
     "\n",
     "```{figure} Images/integrated_THQ.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
+    "Integrated THQ\n",
     "```\n",
     "The tables depicted below are a selection of the available sections [^1].\n",
     "\n",
