--- a/book/basics/steel/material_characteristics_steel.ipynb
+++ b/book/basics/steel/material_characteristics_steel.ipynb
@@ -25,12 +25,7 @@
     "\n",
     "## Stress-strain diagram\n",
     "\n",
-    "```{figure} Images/stress_strain_steel.png\n",
-    "---\n",
-    "align: right\n",
-    "---\n",
-    "Stress-strain diagram steel.\n",
-    "```\n",
+    "\n",
     "```{Note}\n",
     "$ε_{y;d}$ : design yield strain  \n",
     "$f_{t;d}$ : design tensile strength  \n",
@@ -38,7 +33,13 @@
     "tan α : E_d  (Young’s modulus)\n",
     "```\n",
     "\n",
-    "In ordinary calculation the distrubution of forces and structural checks are executed using linear elasticity. In practice this means that as soons as the steel starts to yield, the structure is assumed to have failed. Only the linear part of the diagram shown above is used. The maximum strain is limited by the values given in the material properties table.\n"
+    "In ordinary calculation the distrubution of forces and structural checks are executed using linear elasticity. In practice this means that as soons as the steel starts to yield, the structure is assumed to have failed. Only the linear part of the diagram shown above is used. The maximum strain is limited by the values given in the material properties table.\n",
+    "\n",
+    "```{figure} Images/stress_strain_steel.png\n",
+    "---\n",
+    "---\n",
+    "Stress-strain diagram steel.\n",
+    "```"
    ]
   },
   {
