--- a/book/basics/steel/section_tables.ipynb
+++ b/book/basics/steel/section_tables.ipynb
@@ -169,8 +169,6 @@
     "\n",
     "| Profile | $G \\ [kg/m]$ | $h \\ [mm]$ | $b \\ [mm]$ | $t_w \\ [mm]$ | $t_f \\ [mm]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} \\cdot 10^3 \\ [mm^3]$ | $W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y \\ [mm]$ | $i_z \\ [mm]$ |\n",
     "|------------|--------|--------|--------|----------|----------|---------|----------|----------|---------|---------|-----|-----|\n",
-    "| Type       | h (mm) | b (mm) | s (mm) | t_w (mm) | t_f (mm) | A (cm²) | Wx (cm³) | Wy (cm³) | ix (cm) | iy (cm) | New Column1 | New Column2 |\n",
-    "|------------|--------|--------|--------|----------|----------|---------|----------|----------|---------|---------|-------------|-------------|\n",
     "| HE 360 AA  | 83.7   | 339.0  | 300.0  | 9.00     | 12.0     | 107     | 23040    | 5410     | 1359    | 361     | 147.0       | 71.2        |\n",
     "| HE 360 A   | 112.1  | 350.0  | 300.0  | 10.0     | 17.5     | 143     | 33090    | 7887     | 1891    | 526     | 152.0       | 74.3        |\n",
     "| HE 360 B   | 141.8  | 360.0  | 300.0  | 12.5     | 22.5     | 181     | 43190    | 10140    | 2400    | 676     | 155.0       | 74.9        |\n",
@@ -552,6 +550,7 @@
     "\n",
     "```{figure} Images/corrugated_sheets_sections.png\n",
     "---\n",
+    "scale: 75%\n",
     "---\n",
     "Corrugated sheet-sections\n",
     "```"
