--- a/book/calculation_examples/concrete/column.ipynb
+++ b/book/calculation_examples/concrete/column.ipynb
@@ -24,6 +24,9 @@
     "Estimation rules also exist for columns, but especially for these elements, the actual dimensions required can be very different from those found with these estimation rules. The dimensions of the column depend strongly on the buckling length. However, there is a big difference whether a column has to support an entire building with many floors or just the roof. Often, the column at ground level is the ‘dimensional’ column. A slender column with large buckling length could also be normative, even if it is not on the ground floor.\n",
     "\n",
     "```{figure} Images/Static_Scheme_Column.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```\n",
     "\n",
     "Note that for the b and for the I, the weakest direction should always apply: For HEA profiles, we therefore do not take the profile height but the width of the profile and $I_z$. Precisely this direction is the weakest and (usually) determines buckling out.\n",
@@ -44,8 +47,7 @@
     "\n",
     "```{note}\n",
     "For the concrete structure, this was a beam of 300 mm by 600 mm, made of concrete with a strength class C35/45 and a weight of $4.5 [kN/m]$.\n",
-    "+++\n",
-    "{bdg-secondary}`Concrete`\n",
+    "\n",
     "```\n",
     "\n",
     "For simplicity, we assume that the permanent load of the roof is equal to that of the floors. The roof beams are the same as those in the floor. Depending on the roof covering, the difference will not be significant. According to the Eurocode, for a roof not used as a terrace, an imposed load of $1 [kN/m^2]$ should be taken for every $10 [m^2]$ of roof area. For the entire roof, a lower imposed load can be considered. However, we choose an imposed load of $1 [kN/m^2]$. This also provides the option for installing solar panels (PV panels) or adding a light sedum planting. It is advisable to consistently record the data found for clarity. The table below summarises the loads.\n",
@@ -74,8 +76,7 @@
     "| 360                  | 360x360   | 3.24   | 129600  | $1399.7 \\cdot 10^6$ | C30/37   | 20       | $27.5 \\cdot 10^3$ |\n",
     "\n",
     "For the modulus of elasticity, we must use the design value $\\mathsf{E_{c,d}}$ according to the standard.\n",
-    "+++\n",
-    "{bdg-secondary}`Concrete`\n",
+    "\n",
     "```"
    ]
   },
@@ -96,7 +97,9 @@
     "\n",
     "For the other floors, $\\psi_0$ depends on the use of the floor. For offices, according to the National Annex to the Eurocode, $\\psi_0 = 0.5$. For the roof, $\\psi_0 = 0$ can even be taken (but not if we consider the column under the roof or under the top floor). The formula for the total load on the column is:\n",
     "\n",
-    "$F_d = \\gamma_{G} \\cdot \\Sigma \\hspace{0.1cm} \\text{(permanent load)} + \\gamma_{Q}\\cdot \\Sigma \\hspace{0.1cm} (\\psi_0 \\cdot \\text{variable load})$\n",
+    "$$\n",
+    "F_d = \\gamma_{G} \\cdot \\Sigma \\hspace{0.1cm} \\text{(permanent load)} + \\gamma_{Q}\\cdot \\Sigma \\hspace{0.1cm} (\\psi_0 \\cdot \\text{variable load})\n",
+    "$$\n",
     "\n",
     "$\\gamma_{G}$ and $\\gamma_{Q}$ are the (partial) safety factors.\n",
     "\n",
@@ -111,6 +114,9 @@
     "````\n",
     "\n",
     "```{figure} Images/Table_Concrete_Construction.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```"
    ]
   },
@@ -136,7 +142,9 @@
     "\n",
     "For the compressive stress, we have: \n",
     "\n",
-    "$\\sigma_{c;d} = \\frac{F_{c;d}}{A} \\leq f_{c;d}$\n",
+    "$$\n",
+    "\\sigma_{c;d} = \\frac{F_{c;d}}{A} \\leq f_{c;d}\n",
+    "$$\n",
     "\n",
     "Where:\n",
     "- $A$ is the cross-sectional area.\n",
@@ -144,11 +152,15 @@
     "\n",
     "We can also perform the Unity Check here: \n",
     "\n",
-    "$U.C. \\Rightarrow \\frac{\\sigma_{c;d}}{f_{c;d}} \\leq 1.0$\n",
+    "$$\n",
+    "U.C. \\Rightarrow \\frac{\\sigma_{c;d}}{f_{c;d}} \\leq 1.0\n",
+    "$$\n",
     "\n",
     "If the strength is not satisfied, then we can multiply the found $A$ by the value of the Unity Check to obtain the required cross-section: \n",
     "\n",
-    "$A_{needed} = U.C. \\cdot A_{old}$\n",
+    "$$\n",
+    "A_{needed} = U.C. \\cdot A_{old}\n",
+    "$$\n",
     "\n",
     "```{note}\n",
     "From the weight table, it appears that the concrete column on the ground floor (under the first floor) must support 1854.5 kN. The stress in the column is:\n",
@@ -172,8 +184,7 @@
     "$\\sigma_{c;d}=\\dfrac{F_{c;d}}{A}=\\dfrac{1854.5 \\cdot 10^3 [N]}{300 [mm] \\cdot 300 [mm]} = 20.6\\ [N/mm^2] < 23.3 [N/mm^2]$\n",
     "\n",
     "$U.C. \\Rightarrow \\dfrac{\\sigma_{c;d}}{f_{c;d}}=\\dfrac{20.6 [N/mm^2]}{23.3 [N/mm^2]}=0.88 < 1$ $\\Rightarrow \\textcolor{green}{\\text{Meets Requirement}}$\n",
-    "+++\n",
-    "{bdg-secondary}`Concrete`\n",
+    "\n",
     "```"
    ]
   },
@@ -185,7 +196,9 @@
     "\n",
     "Buckling is a dangerous form of failure that occurs quite suddenly. This problem was recognised long ago. In 1744, the Swiss scholar Leonard Euler came up with the following formula:\n",
     "\n",
-    "$F_{cr} = \\frac{\\pi^2 \\cdot E \\cdot I }{l_{cr}^2}$\n",
+    "$$\n",
+    "F_{cr} = \\frac{\\pi^2 \\cdot E \\cdot I }{l_{cr}^2}\n",
+    "$$\n",
     "\n",
     "$F_{cr}$ (or $F_E$) is called the Euler or critical buckling force.\n",
     "\n",
@@ -196,6 +209,9 @@
     "$l_{cr}$ is the buckling length. In a braced building with hinge connections between columns and beams, the buckling length of the column is equal to the floor height.\n",
     "\n",
     "```{figure} Images/Buckling_Column.jpg\n",
+    "---\n",
+    "scale: 25%\n",
+    "---\n",
     "```\n",
     "\n",
     "```{note}\n",
@@ -216,8 +232,7 @@
     "$I_z=\\frac{1}{12} \\cdot 300 [mm] \\cdot (300 [mm])^3=675 \\cdot 10^6 [mm^4]$\n",
     "\n",
     "and will therefore also be more than sufficient. Concrete columns often provide sufficient buckling safety due to their relatively large surface area.\n",
-    "+++\n",
-    "{bdg-secondary}`Concrete`\n",
+    "\n",
     "```\n",
     "\n",
     "````{margin}\n",
