--- a/book/calculation_examples/steel/cantilever_beam.ipynb
+++ b/book/calculation_examples/steel/cantilever_beam.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "```{figure} ../concrete/Images/Cantilever_Beam_Loads.jpg\n",
     "---\n",
-    "width: 400px\n",
+    "scale: 25%\n",
     "---\n",
     "```\n",
     "\n",
@@ -52,7 +52,7 @@
     "\n",
     "```{figure} ../concrete/Images/Cantilever_Beam_Splitted.jpg\n",
     "---\n",
-    "width: 400px\n",
+    "scale: 25%\n",
     "---\n",
     "```\n",
     "\n",
@@ -61,6 +61,9 @@
     "By splitting the beam in this way, it is possible to use formulas from the formula sheet to calculate the stresses and deformations.\n",
     "\n",
     "```{figure} ../concrete/Images/Forget_Me_Nots_Cantilever_Beam.jpg\n",
+    "---\n",
+    "scale: 25%\n",
+    "---\n",
     "```` \n",
     "\n",
     "For the calculations, we need the following formulas for force effects (with the corresponding number on the formula sheet in brackets):\n",
@@ -73,16 +76,21 @@
     " \n",
     "The load on beam section A-B will cause the cantilever to move upwards. The rise of endpoint D is given by:\n",
     "\n",
-    "$w_{uit,0}=l_{uit}\\cdot \\varphi$\n",
+    "$$\n",
+    "w_{uit,0}=l_{uit}\\cdot \\varphi\n",
+    "$$\n",
     "\n",
     "Using **[A1]**:\n",
-    "$\\varphi=\\frac{1}{24}\\cdot\\dfrac{q l^4_{ov}}{EI}$\n",
+    "\n",
+    "$$\n",
+    "\\varphi=\\frac{1}{24}\\cdot\\dfrac{q l^4_{ov}}{EI}\n",
+    "$$\n",
     "\n",
     "This upward deflection is generally smaller than the deflection due to the variable load on the cantilever. Note that for the q-load in these formulas, different values for both $q_{UGT}$ and $q_{BGT}$ generally need to be used.\n",
     "\n",
     "```{figure} ../concrete/Images/Momentline_Cantilever_Beam.jpg\n",
     "---\n",
-    "width: 400px\n",
+    "scale: 25%\n",
     "---\n",
     "```\n",
     "\n",
@@ -117,7 +125,7 @@
     "\n",
     "```{figure} ../concrete/Images/Schematic_Load_Bearing_Floor_Plan_Cantilever_Beam.jpg\n",
     "---\n",
-    "width: 500px\n",
+    "scale: 25%\n",
     "---\n",
     "```\n",
     "\n",
@@ -151,7 +159,7 @@
     "\n",
     "```{figure} ../concrete/Images/HEA_320.jpg\n",
     "---\n",
-    "width: 400px\n",
+    "scale: 25%\n",
     "---\n",
     "\n",
     "The resting load consists of the weight of the channel plates, the finishing layer, and the ceiling with pipes. The required channel plate has a thickness of 200 mm and a weight of $3.1 [kN/m^2]$. The 50 mm thick topping layer weighs $1.2 [kN/m^2]$, and for the ceiling and pipes, $0.6 [kN/m^2]$ is considered. Together, this gives a resting load of:\n",
@@ -170,8 +178,6 @@
     "\n",
     "$0.98 [kN/m] + 39.2 [kN/m] = 40.2 [kN/m]$\n",
     "\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
     "```\n",
     "\n",
     "With this data, we will check the beam for strength and stiffness. First, we consider the beam section between the supports and then the cantilever. In both calculations, the permanent load is present everywhere. However, different partial factors apply, depending on whether the load is favorable or unfavorable.\n",
@@ -183,7 +189,7 @@
     "\n",
     "```{figure} ../concrete/Images/Cantilever_Beam_Loads_Momentline.jpg\n",
     "---\n",
-    "width: 400px\n",
+    "scale: 25%\n",
     "---\n",
     "```\n",
     "\n",
@@ -232,8 +238,7 @@
     "With strength class S235, the Utilization Coefficient (U.C.):\n",
     "\n",
     "$U.C. \\Rightarrow  \\dfrac{\\sigma_{m,d}}{f_{m,d}}   =  \\dfrac{231.8 [N/mm^2]}{235 [N/mm^2]}  =0.99 \\leq 1.0 \\Rightarrow \\textcolor{green}{\\text{Satisfied}}$\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
+    "\n",
     "```\n",
     "\n",
     "During the calculation of the maximum additional deflection of beam section A-B, the variable load should be placed on this beam section. Deformation is not a safety check, so the partial factors can be omitted, i.e., equal to 1 (and 0 for favorable variable loads).\n",
@@ -258,13 +263,12 @@
     "This gives:\n",
     "\n",
     "$U.C. \\Rightarrow \\dfrac{w_{bij, veld}}{w_{bij, norm}}  = \\dfrac{8.4 [mm]}{12 [mm]} = 0.7 < 1.0 \\Rightarrow \\textcolor{green}{\\text{Satisfied}}$\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
+    "\n",
     "```\n",
     "\n",
     "```{figure} ../concrete/Images/Cantilever_Beam_Loads_Deformationline.jpg\n",
     "---\n",
-    "width: 400px\n",
+    "scale: 25%\n",
     "---\n",
     "```\n",
     "\n",
@@ -276,7 +280,7 @@
     "\n",
     "```{figure} ../concrete/Images/Cantilever_Beam_Loads_Momentline2.jpg\n",
     "---\n",
-    "width: 400px\n",
+    "scale: 25%\n",
     "---\n",
     "```\n",
     "\n",
@@ -300,8 +304,7 @@
     "For S235, the Utilization Coefficient (U.C.):\n",
     "\n",
     "$U.C. \\Rightarrow  \\dfrac{\\sigma_{m,d}}{f_{m,d}}   =  \\dfrac{113.9  [N/mm^2]}{235 [N/mm^2] }  =0.48≤ 1 \\Rightarrow  $ \\textcolor{green}{Satisfied}\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
+    "\n",
     "```\n",
     "\n",
     "In this load combination, the deflection at the end of the cantilever needs to be determined. The maximum additional deflection at D occurs with only a variable load on the cantilever and not on beam section A-B.\n",
@@ -310,7 +313,7 @@
     "\n",
     "```{figure} ../concrete/Images/Cantilever_Beam_Loads_Deformationline2.jpg\n",
     "---\n",
-    "width: 400px\n",
+    "scale: 25%\n",
     "---\n",
     "```\n",
     "\n",
@@ -342,8 +345,7 @@
     "With this, we can perform a U.C.:\n",
     "\n",
     "$U.C. \\rightarrow \\dfrac{w_{bij, uit}}{w_{bij, norm, uit}}   = \\dfrac{5 [mm]}{8 [mm]}  =0,6 \\leq 1,0 \\ \\Rightarrow \\textcolor{green}{\\text{Satisfied}}$\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
+    "\n",
     "```\n",
     "\n",
     "**Evaluation of Verification Calculations:**\n",
