--- a/book/calculation_examples/steel/column.ipynb
+++ b/book/calculation_examples/steel/column.ipynb
@@ -20,6 +20,9 @@
     "Estimation rules also exist for columns, but especially for these elements, the actual dimensions required can be very different from those found with these estimation rules. The dimensions of the column depend strongly on the buckling length. However, there is a big difference whether a column has to support an entire building with many floors or just the roof. Often, the column at ground level is the ‘dimensional’ column. A slender column with large buckling length could also be normative, even if it is not on the ground floor.\n",
     "\n",
     "```{figure} ../concrete/Images/Static_Scheme_Column.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```\n",
     "\n",
     "Note that for the b and for the I, the weakest direction should always apply: For HEA profiles, we therefore do not take the profile height but the width of the profile and $I_z$. Precisely this direction is the weakest and (usually) determines buckling out.\n",
@@ -40,8 +43,7 @@
     "\n",
     "```{note}\n",
     "The imposed load on the beam and the superimposed load have already been determined in the beam's verification calculation. We found $3$ for the imposed floor load and $4.9 [kN/m^2]$ for the superimposed load on the beam. We will use the beams identified in the verification calculation. For the steel structure, this was an HE300A, strength class S355, with a weight of $0.88 [kN/m]$.\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
+    "\n",
     "```\n",
     "\n",
     "For simplicity, we assume that the permanent load of the roof is equal to that of the floors. The roof beams are the same as those in the floor. Depending on the roof covering, the difference will not be significant. According to the Eurocode, for a roof not used as a terrace, an imposed load of $1 [kN/m^2]$ should be taken for every $10 [m^2]$ of roof area. For the entire roof, a lower imposed load can be considered. However, we choose an imposed load of $1 [kN/m^2]$. This also provides the option for installing solar panels (PV panels) or adding a light sedum planting. It is advisable to consistently record the data found for clarity. The table below summarises the loads.\n",
@@ -71,8 +73,7 @@
     "width: 400px\n",
     "---\n",
     "```\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
+    "\n",
     "````"
    ]
   },
@@ -93,7 +94,9 @@
     "\n",
     "For the other floors, $\\psi_0$ depends on the use of the floor. For offices, according to the National Annex to the Eurocode, $\\psi_0 = 0.5$. For the roof, $\\psi_0 = 0$ can even be taken (but not if we consider the column under the roof or under the top floor). The formula for the total load on the column is:\n",
     "\n",
-    "$F_d = \\gamma_{G} \\cdot \\Sigma \\hspace{0.1cm} \\text{(permanent load)} + \\gamma_{Q}\\cdot \\Sigma \\hspace{0.1cm} (\\psi_0 \\cdot \\text{variable load})$\n",
+    "$$\n",
+    "F_d = \\gamma_{G} \\cdot \\Sigma \\hspace{0.1cm} \\text{(permanent load)} + \\gamma_{Q}\\cdot \\Sigma \\hspace{0.1cm} (\\psi_0 \\cdot \\text{variable load})\n",
+    "$$\n",
     "\n",
     "$\\gamma_{G}$ and $\\gamma_{Q}$ are the (partial) safety factors.\n",
     "\n",
@@ -108,6 +111,9 @@
     "````\n",
     "\n",
     "```{figure} ../concrete/Images/Table_Steel_Construction.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```"
    ]
   },
@@ -133,7 +139,9 @@
     "\n",
     "For the compressive stress, we have: \n",
     "\n",
-    "$\\sigma_{c;d} = \\frac{F_{c;d}}{A} \\leq f_{c;d}$\n",
+    "$$\n",
+    "\\sigma_{c;d} = \\frac{F_{c;d}}{A} \\leq f_{c;d}\n",
+    "$$\n",
     "\n",
     "Where:\n",
     "- $A$ is the cross-sectional area.\n",
@@ -141,11 +149,15 @@
     "\n",
     "We can also perform the Unity Check here: \n",
     "\n",
-    "$U.C. \\Rightarrow \\frac{\\sigma_{c;d}}{f_{c;d}} \\leq 1.0$\n",
+    "$$\n",
+    "U.C. \\Rightarrow \\frac{\\sigma_{c;d}}{f_{c;d}} \\leq 1.0\n",
+    "$$\n",
     "\n",
     "If the strength is not satisfied, then we can multiply the found $A$ by the value of the Unity Check to obtain the required cross-section: \n",
     "\n",
-    "$A_{needed} = U.C. \\cdot A_{old}$\n",
+    "$$\n",
+    "A_{needed} = U.C. \\cdot A_{old}\n",
+    "$$\n",
     "\n",
     "```{note}\n",
     "For the steel column, the total load on the column according to the weight table is 1705 [kN]. The stress in the column is:\n",
@@ -156,8 +168,6 @@
     "\n",
     "$U.C. \\Rightarrow \\dfrac{\\sigma_{c;d}}{f_{c;d}}=\\dfrac{222 [N/mm^2]}{235 [N/mm^2]}=0.94 < 1.0 \\Rightarrow \\textcolor{green}{\\text{Meets Requirement}}$\n",
     "\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
     "```"
    ]
   },
@@ -169,7 +179,9 @@
     "\n",
     "Buckling is a dangerous form of failure that occurs quite suddenly. This problem was recognised long ago. In 1744, the Swiss scholar Leonard Euler came up with the following formula:\n",
     "\n",
-    "$F_{cr} = \\frac{\\pi^2 \\cdot E \\cdot I }{l_{cr}^2}$\n",
+    "$$\n",
+    "F_{cr} = \\frac{\\pi^2 \\cdot E \\cdot I }{l_{cr}^2}\n",
+    "$$\n",
     "\n",
     "$F_{cr}$ (or $F_E$) is called the Euler or critical buckling force.\n",
     "\n",
@@ -180,6 +192,9 @@
     "$l_{cr}$ is the buckling length. In a braced building with hinge connections between columns and beams, the buckling length of the column is equal to the floor height.\n",
     "\n",
     "```{figure} ../concrete/Images/Buckling_Column.jpg\n",
+    "---\n",
+    "scale: 25%\n",
+    "---\n",
     "```\n",
     "\n",
     "```{note}\n",
@@ -196,8 +211,7 @@
     "$I_{z,necessary} = U.C. \\cdot I_{z,old} = 1.92 \\cdot 27.69 \\cdot 10^6 [mm^4] = 52.6 \\cdot 10 [mm^4]$.\n",
     "\n",
     "In the steel profile app, a profile with at least this quadratic surface moment can be found. This could be, for example, a HE300A, which provides sufficient buckling safety. A higher strength class is not meaningful here.\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
+    "\n",
     "```\n",
     "\n",
     "````{margin}\n",
