--- a/book/design/concrete/bridge_beams.ipynb
+++ b/book/design/concrete/bridge_beams.ipynb
@@ -15,16 +15,20 @@
     "T-sections. This section gives an overview of some possibilities [^1][^2].\n",
     "\n",
     "```{figure} Images/Bridge_Beams1.jpg\n",
-    "Prefab concrete bridge beams.\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```  \n",
     "\n",
     "```{figure} Images/Bridge_Beams2.jpg\n",
+    "Prefab concrete bridge beams.\n",
     "```\n",
     "\n",
     "## Applications\n",
     "\n",
     "```{figure} Images/Viaduct.jpg\n",
     "---\n",
+    "scale: 50%\n",
     "---\n",
     "Prefab beams with a compressive slab and a bridge deck, tram line construction.\n",
     "```      \n",
@@ -33,11 +37,12 @@
     "is supported by pilars on foundation blocks with center to center distances of 20 meters. The foundation blocks are founded on prefab or Fundexpiles.\n",
     "\n",
     "The pilars are cast in one piece with self compacting concrete because:\n",
-    "• High concentrations of reinforcement occured.\n",
-    "• Not all locations could be reached with compaction devices.\n",
-    "• High erection speed was necessary\n",
-    "• There was a large chance of the arisal of rockpockets which, even after repair, always have lower strength and druability.\n",
-    "• Construction joints were not desirable from an aestethical point of view\n",
+    "\n",
+    "- High concentrations of reinforcement occured.\n",
+    "- Not all locations could be reached with compaction devices.\n",
+    "- High erection speed was necessary\n",
+    "- There was a large chance of the arisal of rockpockets which, even after repair, always have lower strength and druability.\n",
+    "- Construction joints were not desirable from an aestethical point of view\n",
     "\n",
     "Near the bus stop the bridge deck is built from ZIP-beams with a compressive layer of 250 mm and an additional deck layer of 200 mm. The decklayer does not contribute to the bearing capacity of the bridge. In the future it has to be possible to mill slots in the deck layer to place tramrails. The deck layer is connected to the compressive layer by means\n",
     "of hairpins. Also transverse and longitudinal reinforcement is applied, adjusted to the future tramrails.  \n",
@@ -54,13 +59,20 @@
     "necessary to, if necessary, adjust the design.\n",
     "\n",
     "```{figure} Images/Bridge_Application1.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```\n",
     "\n",
     "```{figure} Images/Bridge_Application2.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```\n",
     "\n",
     "```{figure} Images/Bridge_Application3.jpg\n",
     "---\n",
+    "scale: 50%\n",
     "---\n",
     "Three different views on the tram line.\n",
     "```\n",
@@ -85,17 +97,23 @@
     "## Bridge beams II\n",
     "\n",
     "```{figure} Images/HKPW_BridgeBeam.jpg\n",
-    "\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "HKPW profile\n",
     "```\n",
     "\n",
     "```{figure} Images/HPRP_BridgeBeam.jpg\n",
-    "\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "HPRP profile\n",
     "```\n",
     "\n",
     "```{figure} Images/HKO_BridgeBeam.jpg\n",
-    "\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "HKO profile\n",
     "```\n"
    ]
