--- a/book/design/concrete/bubbledeck_floors.ipynb
+++ b/book/design/concrete/bubbledeck_floors.ipynb
@@ -127,17 +127,23 @@
    "metadata": {},
    "source": [
     "```{figure} Images/DetailBubbledeck1.jpg\n",
-    "\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "Cross section of a bubble deck floor\n",
     "```    \n",
     "\n",
     "```{figure} Images/DetailBubbledeck2.jpg\n",
-    "\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "Support of bubbledeck floor on concrete wall\n",
     "```    \n",
     "\n",
     "```{figure} Images/DetailBubbledeck3.jpg\n",
-    "\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "Support of bubble deck floor with cavity wall for residential construction\n",
     "```    "
    ]
