--- a/book/design/concrete/composite_floors.ipynb
+++ b/book/design/concrete/composite_floors.ipynb
@@ -11,15 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Corrugated sheet metal sheets are very suitable to act as formwork for cast in situ concrete floors. The sheets are light, are easily applied and can\n",
-    "immediatly act as a working floor. The trapezoidal shape causes weight saving in comparison with a massive concrete floor.\n",
-    "Strengths of composite floors are the flexibility, construction speed, low mass, adaptability and high amoun of thermal mass with respect to the\n",
-    "actual mass. The low self weight of the composite floor construction, $210 - 340 kg/m^2$, causes the air and sound insulation to be lower than with prefab\n",
-    "concrete elements. This problem can be solved with a suspended ceiling and/or a double floor. With these solutions the same\n",
-    "results can be achieved as with a massive floor of 800 kg/m2. The composite floors do not have a flat surface, but this does not have to be\n",
-    "a problem if the correct connections are used. Floors with voids or curved façades can easily be built. The construction speed does not depend\n",
-    "on the formwork system or hardening time. The laid out sheets act as working floor, formwork and a roof for the crews installing the building\n",
-    "finishes.\n",
+    "Corrugated sheet metal sheets are very suitable to act as formwork for cast in situ concrete floors. The sheets are light, are easily applied and can immediatly act as a working floor. The trapezoidal shape causes weight saving in comparison with a massive concrete floor.\n",
+    "\n",
+    "Strengths of composite floors are the flexibility, construction speed, low mass, adaptability and high amoun of thermal mass with respect to the actual mass. The low self weight of the composite floor construction, $210 - 340 kg/m^2$, causes the air and sound insulation to be lower than with prefab concrete elements. This problem can be solved with a suspended ceiling and/or a double floor. With these solutions the same results can be achieved as with a massive floor of 800 kg/m2. \n",
+    "\n",
+    "The composite floors do not have a flat surface, but this does not have to be a problem if the correct connections are used. Floors with voids or curved façades can easily be built. The construction speed does not depend on the formwork system or hardening time. \n",
+    "The laid out sheets act as working floor, formwork and a roof for the crews installing the building finishes.\n",
     "\n",
     "```{note}\n",
     "www.dutchengineering.nl\n",
