--- a/book/design/concrete/hollow_core_slabs.ipynb
+++ b/book/design/concrete/hollow_core_slabs.ipynb
@@ -19,9 +19,9 @@
     "The floor concept is based on the following principles:\n",
     "- No voids.\n",
     "- No concentrated loads.\n",
-    "- Free supports (no clamped supports)\n",
-    "- Standard fire resistance\n",
-    "- Deflection under variable load of max. 0,003 L\n",
+    "- Free supports (no clamped supports).\n",
+    "- Standard fire resistance.\n",
+    "- Deflection under variable load of max. 0,003 L.\n",
     "\n",
     "```{figure} Images/HollowCore1.jpg\n",
     "\n",
@@ -29,7 +29,9 @@
     "```  \n",
     "\n",
     "```{figure} Images/HollowCore2.jpg\n",
-    "\n",
+    "---\n",
+    "scale: 30%\n",
+    "---\n",
     "Hollow core example [^1][^2].\n",
     "```  \n",
     "\n",
@@ -44,16 +46,34 @@
     "In contrast to what one may expect hollow core slabs also offer opportunities for free formed floor plans. The use of hollow core slabs is not restricted to the rectangular floor plans used in offices and flats. Both round shaps as chamfered egdes are possible. It is important to realise that the plates can be cut under an angle.\n",
     "\n",
     "```{figure} Images/HollowCoreApplication1.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```    \n",
     "```{figure} Images/HollowCoreApplication2.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```   \n",
     "```{figure} Images/HollowCoreApplication3.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```   \n",
     "```{figure} Images/HollowCoreApplication4.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```   \n",
     "```{figure} Images/HollowCoreApplication5.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```   \n",
     "```{figure} Images/HollowCoreApplication6.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```   \n",
     "\n",
     "## Execution aspects\n",
@@ -84,11 +104,13 @@
     "\n",
     "```{figure} Images/ExecutionAspects1.jpg\n",
     "---\n",
+    "scale: 50%\n",
     "---\n",
     "Load transmission to stabilising elements.\n",
     "```   \n",
     "```{figure} Images/ExecutionAspects2.jpg\n",
     "---\n",
+    "scale: 50%\n",
     "---\n",
     "Load transmission to stabilising elements.\n",
     "``` \n",
@@ -115,6 +137,7 @@
     "\n",
     "```{figure} Images/VBI1.jpg\n",
     "---\n",
+    "scale: 30%\n",
     "---\n",
     "VBI A200 slab floor cross-section.\n",
     "```   \n",
@@ -128,6 +151,7 @@
     " \n",
     "```{figure} Images/HollowCoreSpans.jpg\n",
     "---\n",
+    "scale: 50%\n",
     "---\n",
     "Load resistance vs. spans of a Hollow Core slab (VBI 200).\n",
     "```\n",
@@ -135,8 +159,12 @@
     "### Connections (All types of hollow core slabs)\n",
     "\n",
     "The bearing length ‘a’ should, when a SBR centering strip is used, fulfill the following conditions:\n",
-    "$a = 40 + 0,004 L$ (floors)\n",
-    "$a = 30 + 0,004 L$ (roofs)  \n",
+    "\n",
+    "\\begin{gather*}\n",
+    "a = 40 + 0,004 L (floors)\\\\\n",
+    "a = 30 + 0,004 L (roofs) \n",
+    "\\end{gather*}\n",
+    " \n",
     "$L$ = span in mm.\n",
     "$a = a_r + a_o$  \n",
     "$a_o$ = see figure  \n",
@@ -154,6 +182,7 @@
     "\n",
     "```{figure} Images/HollowCoreConnections.jpg\n",
     "---\n",
+    "scale: 50%\n",
     "---\n",
     "Minimum conditions for the bearing length of a Hollow Core slab.\n",
     "```\n",
@@ -180,6 +209,7 @@
     "\n",
     "```{figure} Images/VBI3.jpg\n",
     "---\n",
+    "sclae: 50%\n",
     "---\n",
     "VBI A320 slab floor cross-section.\n",
     "```  \n",
@@ -193,6 +223,7 @@
     "\n",
     "```{figure} Images/HollowCoreSpans2.jpg\n",
     "---\n",
+    "scale: 50%\n",
     "---\n",
     "Load resistance vs. spans of a Hollow Core Slab (VBI 320).\n",
     "```\n",
@@ -272,7 +303,7 @@
     }
    },
    "source": [
-    "# 3D Example of hollow core slab\n",
+    "### 3D Example of hollow core slab\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
     "    <iframe src=\"../../_static/Connection_Concrete_HollowCore.html\" width=\"750\" height=\"750\" frameborder=\"0\"></iframe>\n",
