--- a/book/design/concrete/precast_concrete_planks.ipynb
+++ b/book/design/concrete/precast_concrete_planks.ipynb
@@ -11,18 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Precast concrete planks are prefabricated formwork elements. On top of the precast elements in situ\n",
-    "concrete is casted. The floors are suitable as floors is residential and non residential buildings. The precast\n",
-    "slabs have a thickness of 50 to 90 mm and a maximum length of 8500 mm. The protruding reinforcement trusses\n",
-    "are calculated per project because the size depends on the load and span. The main reinforcement and trusses\n",
-    "are placed parallel to the main span direction. Ducts can be casted in. In the structural topping additional\n",
-    "bottom and top reinforcement can be placed. The topping is of strength class C20/25 or higher. Voids can\n",
-    "be added in the fabrication process, and ground floors can be isolated at the bottom side of the slab. Propping\n",
-    "needs to be done according to the fabricators instructions. Eventually the precast planks and topping act as one\n",
-    "slab which has a reasonable degree of flexibility [^1].\n",
+    "Precast concrete planks are prefabricated formwork elements. On top of the precast elements in situ concrete is casted. The floors are suitable as floors in residential and non residential buildings. \n",
+    "\n",
+    "The precast slabs have a thickness of 50 to 90 mm and a maximum length of 8500 mm. The protruding reinforcement trusses are calculated per project because the size depends on the load and span. The main reinforcement and trusses are placed parallel to the main span direction. Ducts can be casted in. In the structural topping additional bottom and top reinforcement can be placed. The topping is of strength class C20/25 or higher. Voids can be added in the fabrication process, and ground floors can be isolated at the bottom side of the slab. Propping needs to be done according to the fabricators instructions.\n",
+    " \n",
+    "Eventually the precast planks and topping act as one slab which has a reasonable degree of flexibility [^1].\n",
     "\n",
     "```{figure} Images/PrecastConcrete_Planks.jpg\n",
     "---\n",
+    "scale: 50%\n",
     "---\n",
     "Precast concrete planks.\n",
     "```  \n",
