--- a/book/design/concrete/prefab_prestressed_beams.ipynb
+++ b/book/design/concrete/prefab_prestressed_beams.ipynb
@@ -13,6 +13,7 @@
    "source": [
     "```{figure} Images/Prefab_Prestressed.jpg\n",
     "---\n",
+    "scale: 50%\n",
     "---\n",
     "Construction of prefab prestressed concrete beams.\n",
     "``` \n",
@@ -36,7 +37,9 @@
     "### Spans\n",
     "\n",
     "```{figure} Images/Haitsma_Spans.jpg\n",
-    "\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "For I-shaped beams type HRI / HDI\n",
     "```\n",
     "\n",
@@ -57,11 +60,13 @@
     "\n",
     "```{figure} Images/Haitsma_Prestressed_Rectangular_Spans.jpg\n",
     "---\n",
+    "scale: 50%\n",
     "---\n",
     "Load resistance vs. span length (HRH 360).\n",
     "```  \n",
     "```{figure} Images/Haitsma_Prestressed_Rectangular_Spans2.jpg\n",
     "---\n",
+    "scale: 50%\n",
     "---\n",
     "Load resistance vs. span length (HRH 900)\n",
     "```     \n",
@@ -82,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3D Example of prefab concrete connection\n",
+    "### 3D Example of prefab concrete connection\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
     "    <iframe src=\"../../_static/Connection_Concrete_Standard.html\" width=\"750\" height=\"750\" frameborder=\"0\"></iframe>\n",
