--- a/book/design/foundations/foundation_methods_2.ipynb
+++ b/book/design/foundations/foundation_methods_2.ipynb
@@ -8,11 +8,13 @@
     "\n",
     "## Introduction\n",
     "\n",
+    "```{note}\n",
     "Most information is taken from Vroom [^1] and Walinco [^2].\n",
+    "```\n",
     "\n",
     "```{figure} Images/fm2_pile.png\n",
     "---\n",
-    "align: right\n",
+    "scale: 50%\n",
     "---\n",
     "Pile foundations.\n",
     "```\n",
@@ -48,6 +50,7 @@
     "\n",
     "```{figure} Images/foundation_tree.png\n",
     "---\n",
+    "scale: 50%\n",
     "---\n",
     "Foundation tree\n",
     "```\n",
@@ -55,7 +58,6 @@
     "## Prefab concrete piles\n",
     "```{figure} Images/prefab_concrete_piles.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
     "Prefab concrete piles\n",
     "```\n",
@@ -116,7 +118,6 @@
     "\n",
     "```{figure} Images/CHS.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
     "CHS\n",
     "```\n",
@@ -145,7 +146,6 @@
     "\n",
     "```{figure} Images/steel_profiles.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
     "Steel profiles (I, H and Z-profiles)\n",
     "```\n",
@@ -170,7 +170,6 @@
     "\n",
     "```{figure} Images/vibropile.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
     "Vibropile\n",
     "```\n",
@@ -204,7 +203,6 @@
     "\n",
     "```{figure} Images/frankipile.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
     "Frankipile\n",
     "```\n",
@@ -233,7 +231,6 @@
     "\n",
     "```{figure} Images/fundexpile.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
     "Fundexpile\n",
     "```\n",
@@ -262,7 +259,6 @@
     "\n",
     "```{figure} Images/tubexpile.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
     "Tubexpile\n",
     "```\n",
@@ -292,7 +288,6 @@
     "\n",
     "```{figure} Images/augerpile.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
     "Augerpile\n",
     "```\n",
@@ -308,7 +303,6 @@
     "\n",
     "```{figure} Images/diaphragm_walls.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
     "Diaphragm walls\n",
     "```\n",
