--- a/book/design/timber/connection_elements.ipynb
+++ b/book/design/timber/connection_elements.ipynb
@@ -13,7 +13,6 @@
     "\n",
     "```{figure} Images/bolts_and_dowels.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
     "Bolted connection\n",
     "```\n",
@@ -27,7 +26,6 @@
     "\n",
     "```{figure} Images/split_ring_connection.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
     "Example of a split ring connection\n",
     "```\n",
@@ -40,7 +38,6 @@
     "## Toothed plates\n",
     "```{figure} Images/toothed_plate.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
     "Example of a toothed plate\n",
     "```\n",
@@ -51,7 +48,6 @@
     "## Coach screws\n",
     "```{figure} Images/coach_screw.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
     "Coach screw\n",
     "```\n",
@@ -60,7 +56,6 @@
     "## Cold formed steel fasteners: joist hangers, integral fasteners and angle brackets\n",
     "```{figure} Images/connection_to_elongated.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
     "Connection to elongate a beam (shear force splice)\n",
     "```\n",
@@ -78,7 +73,6 @@
     "\n",
     "```{figure} Images/punched_metal_plates.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
     "Examples of punched metal plates\n",
     "```\n",
@@ -91,13 +85,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3D connection in timber\n",
+    "## 3D connection in timber\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
     "    <iframe src=\"../../_static/Connection_Timber_Standard.html\" width=\"750\" height=\"750\" frameborder=\"0\"></iframe>\n",
     "</div>\n",
     "\n",
-    "# 3D connection in timber advanced\n",
+    "## 3D connection in timber advanced\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
     "    <iframe src=\"../../_static/Connection_Timber_Advanced.html\" width=\"750\" height=\"750\" frameborder=\"0\"></iframe>\n",
