--- a/book/design_workflow/general_drawing/technical_drawings.ipynb
+++ b/book/design_workflow/general_drawing/technical_drawings.ipynb
@@ -78,25 +78,26 @@
     "```\n",
     "\n",
     "## Dimensions\n",
-    "How? Dimensions are indicated by a dimension line and two auxilairy lines indicating the length to be dimensioned. The intersection\n",
+    "**How?** Dimensions are indicated by a dimension line and two auxilairy lines indicating the length to be dimensioned. The intersection\n",
     "between the lines is indicated with a little diagonal line, dot or arrow. The auxilairy lines do not touch the object. The value of the\n",
     "dimension is written in the middle of the dimension line, but can be placed on a leader if there is a lack of space. Heights are usually\n",
     "measured in relation to a reference level and are indicated with an arrow. The units used depend on the size of the object, but can only\n",
-    "be: micrometers, millimeters, meters and kilometers. What? Only the dimensions necessary to understand and built\n",
-    "the object need to be shown. Where possible, use centre lines. Where? Place dimensions as much as possible to the right and below\n",
-    "the elevation which shows the important component the clearest. Deviations of this ‘general rule’ are only allowed if this clarifies the\n",
-    "drawing. If multiple dimensions are shown on one line, a summation must always be added, with an extra dimension line.\n",
+    "be: micrometers, millimeters, meters and kilometers. \n",
+    "\n",
+    "**What?** Only the dimensions necessary to understand and built the object need to be shown. Where possible, use centre lines.\n",
+    "\n",
+    "**Where?** Place dimensions as much as possible to the right and below the elevation which shows the important component the clearest. Deviations of this ‘general rule’ are only allowed if this clarifies the drawing. If multiple dimensions are shown on one line, a summation must always be added, with an extra dimension line.\n",
     "\n",
     "```{figure} Images/General_Drawing7.jpg\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 50%\n",
     "---\n",
     "Dimensioning in technical drawing, height levels.\n",
     "```\n",
     "\n",
     "```{figure} Images/General_Drawing8.png\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 75%\n",
     "---\n",
     "Dimensioning in technical drawing, details. \n",
     "```\n",
@@ -130,7 +131,7 @@
     "\n",
     "```{figure} Images/General_Drawing11.png\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 75%\n",
     "---\n",
     "Text in technical drawings.\n",
     "```"
