--- a/book/design_workflow/general_loads/deformation_limits.ipynb
+++ b/book/design_workflow/general_loads/deformation_limits.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "```{figure} Images/Deformation.jpg\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 50%\n",
     "---\n",
     "Deflections $w_i$.\n",
     "```"
@@ -60,14 +60,14 @@
     "\n",
     "```{figure} Images/Water_Accumulation1.jpg\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 50%\n",
     "---\n",
-    "$w_{max}$ versus $phi_{remaining}$.\n",
+    "$w_{\\text{max}}$ vs. $\\phi_{\\text{remaining}}$\n",
     "```\n",
     "\n",
     "```{figure} Images/Water_Accumulation2.jpg\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 25%\n",
     "---\n",
     "Too large deformations leading to water accumulation and eventually failure.\n",
     "```"
@@ -96,7 +96,7 @@
     "\n",
     "```{figure} Images/Low_Rise_Deformation.jpg\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 40%\n",
     "---\n",
     "Low rise deformation.\n",
     "```\n",
@@ -108,7 +108,7 @@
     "\n",
     "```{figure} Images/High_Rise_Deformation.jpg\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 40%\n",
     "---\n",
     "High rise deformation.\n",
     "```"
