--- a/book/design_workflow/general_loads/permanent_loads.ipynb
+++ b/book/design_workflow/general_loads/permanent_loads.ipynb
@@ -27,36 +27,36 @@
    "source": [
     "## Materials (structural)\n",
     "\n",
-    "# Primary building materials\n",
+    "### Primary building materials\n",
     "| Material          | ρ [$kg/m^3$] |\n",
     "|--------------------------|------------------|\n",
-    "| Dunesand                 |                  |\n",
+    "| **Dunesand**             |                  |\n",
     "| - dry                    | 1550             |\n",
     "| - humid                  | 1700             |\n",
     "| - saturated              | 1950             |\n",
-    "| River- and Pebble-sand    |                  |\n",
+    "| **River- and Pebble-sand** |                  |\n",
     "| - dry                    | 1650             |\n",
     "| - humid                  | 1750             |\n",
     "| - saturated              | 2000             |\n",
-    "| Gravel                   |                  |\n",
+    "| **Gravel**               |                  |\n",
     "| - dry                    | 1600             |\n",
     "| - humid                  | 1700-2000        |\n",
     "| - saturated              | 1922             |\n",
-    "| Soil and Clay            |                  |\n",
+    "| **Soil and Clay**        |                  |\n",
     "| - dry                    | 1600             |\n",
     "| - wet                    | 2000             |\n",
-    "| Natural Stone            |                  |\n",
-    "| Basalt, Granite          | 2850             |\n",
-    "| Limestone, Marble        | 2700             |\n",
-    "| Shale                    | 2700             |\n",
+    "| **Natural Stone**        |                  |\n",
+    "| **Basalt, Granite**      | 2850             |\n",
+    "| **Limestone, Marble**    | 2700             |\n",
+    "| **Shale**                | 2700             |\n",
     "\n",
-    "# Secondary building materials\n",
+    "### Secondary building materials\n",
     "| Material         | ρ [$kg/m^3$] |\n",
     "|-----------------------|------------------|\n",
     "| Ash                   | 1000             |\n",
     "| Blast Furnace Slag     | 1700             |\n",
     "\n",
-    "# Masonry\n",
+    "### Masonry\n",
     "| Material              | ρ [$kg/m^3$] |\n",
     "|---------------------------|------------------|\n",
     "| Clinker Brick             | 2000             |\n",
@@ -67,7 +67,7 @@
     "| Facing Brick (20%)        | 1800             |\n",
     "| Sand-lime Bricks          | 1850             |\n",
     "\n",
-    "# Concrete masonry units\n",
+    "### Concrete masonry units\n",
     "| Material              | ρ [$kg/m^3$] |\n",
     "|---------------------------|------------------|\n",
     "| - light                    | 800-1500         |\n",
@@ -79,7 +79,7 @@
     "| - porous                   | 1900             |\n",
     "| - non porous               | 2300             |\n",
     "\n",
-    "# Concrete\n",
+    "### Concrete\n",
     "| Material              | ρ [$kg/m^3$] |\n",
     "|---------------------------|------------------|\n",
     "| Lightweight Concrete      | <2000            |\n",
@@ -158,14 +158,14 @@
     "| Material                              | [$kN/m^2$] | Material                                         | [$kN/m^2$] |\n",
     "|--------------------------------------|---------|-------------------------------------------------|---------|\n",
     "| Steel façade elements                | 0.05-0.13 | Polymer foils                                 | 0.02    |\n",
-    "| Façade insulation                    | 0.015-0.05 | Corrugated sheet - fibre reinforced cement   |         |\n",
+    "| Façade insulation                    | 0.015-0.05 | Corrugated sheet <br> fibre reinforced cement   |         |\n",
     "| Timber floor + beams                 | 0.3     | Plate only                                     | 0.15    |\n",
     "| Steel roof sheeting                  | 0.05-0.18 | Plate + connections and purlins               | 0.25    |\n",
     "| - e.g. Steel roof sheet (t=0.75 mm) | 0.11    | corrugated sheet - polymers                   | 0.02    |\n",
     "| Insulation and roofing               | 0.10-0.20 | Corrugated steet - galvanized                 |         |\n",
     "| Bitumenlayers + connectons and purlins | 0.15  |                                                 |         |\n",
     "| Glass fabric 2 layers               | 0.07    | Roof tiles + underlay and purlins             | 0.65    |\n",
-    "| Glass fabric 3 layers               | 0.1     | Flat roof + beams and underlay (no gravel)    | 0.36    |\n",
+    "| Glass fabric 3 layers               | 0.1     | Flat roof + beams and underlay <br> (no gravel)    | 0.36    |\n",
     "| Shingles                             | 0.07    |                                                 |         |\n"
    ]
   }
