--- a/book/design_workflow/general_loads/structural_safety.ipynb
+++ b/book/design_workflow/general_loads/structural_safety.ipynb
@@ -11,9 +11,9 @@
     "```\n",
     "\n",
     "A structure should be sufficiently safe. This means that the probability of failure should be sufficiently low, but unfortunately enough it can never be 0 %. It is possible to determine the risk of failure of a structure (or more positively formulated: the structural reliability ) by carrying out a probabilistic calculation. There are 3 methods of calculations to deal with uncertainty, with increasing level of complexity (International Organization for Standardization 11 2015). Those are:\n",
-    "- **Semi-probabilistic approach**: Safety format prescribing the design equations and the analysis procedures to be used Default method in the Eurocodes, i.e. to be used for usual design situations.\n",
-    "- **Reliability-based design and assessment**: Reliability requirements to fulfil Unusual design situations in regard to uncertainties, Code calibration.\n",
-    "- **Risk-informed decision making**: Decisions are taken with due consideration of the total risks (e.g. loss of lives, injuries). Exceptional design situations in regard to uncertainties and consequences. Derivation of reliability requirements\n",
+    "- **Semi-probabilistic approach**: Safety format prescribing the design equations and the analysis procedures to be used default method in the Eurocodes, i.e. to be used for usual design situations.\n",
+    "- **Reliability-based design and assessment**: Reliability requirements to fulfil unusual design situations in regard to uncertainties, code calibration.\n",
+    "- **Risk-informed decision making**: Decisions are taken with due consideration of the total risks (e.g. loss of lives, injuries). Exceptional design situations in regard to uncertainties and consequences. Derivation of reliability requirements.\n",
     "\n",
     " To prevent the design of every single structure resulting in a fully probabilistic undertaking, however, for most structures a simplified approach is allowed. Eurocode 0 (prNEN-EN-1990 2021) describes such a simplified, semi-probabilistic method, in which the stochastic distributions of material strength and load values are expressed by characteristic values, taking into account their spread, and by partial safety factors, that ensure sufficient safety margin between loads and capacity.\n",
     "\n",
@@ -29,7 +29,7 @@
     "```{Admonition} In depth review of partial factors from Eurocode\n",
     ":class: note, dropdown\n",
     "\n",
-    "How are the values of $\\gamma_{F}$ and $\\gamma_{M}$ related to the stochastic spread? From Schneider and Vrouwenvelder (2017, equation 4.44) the following equations can be derived:\n",
+    "How are the values of $\\gamma_{F}$ and $\\gamma_{M}$ related to the stochastic spread? From Schneider and Vrouwenvelder [^1] the following equations can be derived:\n",
     "\n",
     "$$\n",
     "\\gamma_i = \\frac{\\mu_i - \\alpha_i \\cdot \\beta_0 \\cdot \\sigma_i}{X_{char,i}}\n",
@@ -77,23 +77,18 @@
     "- Fourth and finally, Ed and Rd are compared, in either of the two following ways: direct comparison $E_d ≤ R_d$ or unity check {eq}`unity_check`, the latter with the advantage that it gives some numerical information on the \"safety distance\" between Ed and Rd.\n",
     "\n",
     "\n",
-    "```{figure} Images/E_R_normaldistributions.png\n",
-    "---\n",
-    "---\n",
-    ":name: example\n",
-    "Example of a normal distribution of Effects ($E$) and Resistance ($R$) and the place of\n",
-    "characteristic values Echar and Rchar and design values $E_d$ and $R_d$. The characteristic\n",
-    "values are obtained by finding from the normal distribution the values with a 5% prob-\n",
-    "ability of exceedance ($μ_E$ + 1.64 · $σ_E$ for $E$ and $μ_R$ − 1.64 · $σ_R$ for $R$). The design\n",
-    "values are found by multiplying /dividing the characteristic values with the partial safety\n",
-    "factors $γ_E$ and $γ_R$. The distance on the horizontal axis between Ed and Rd represents \n",
-    "a measure of the unity-check (u.c.). In this example, $E_d$ = 0.81 · $R_d$. The structure \n",
-    "is more than safe.\n",
-    "```\n",
+    ">```{figure} Images/E_R_normaldistributions.png\n",
+    ">---\n",
+    ">---\n",
+    ">Example\n",
+    ">```\n",
+    ">\n",
+    ">Example of a normal distribution of Effects ($E$) and Resistance ($R$) and the place of characteristic values Echar and Rchar and design values $E_d$ and $R_d$. The characteristic values are obtained by finding from the normal distribution the values with a 5% probability of exceedance ($μ_E$ + 1.64 · $σ_E$ for $E$ and $μ_R$ − 1.64 · $σ_R$ for $R$). The design values are found by multiplying /dividing the characteristic values with the partial safety factors $γ_E$ and $γ_R$. The distance on the horizontal axis between Ed and Rd represents a measure of the unity-check (u.c.). In this example, $E_d$ = 0.81 · $R_d$. The structure is more than safe.\n",
+    "\n",
     "\n",
     "## Reliability index\n",
     "\n",
-    "The \"safety distance\" should somehow be numerically linked to the accepted level of failure probability. Understandably, the higher the standard deviation of either or both variables E and R, the higher the safety distance should be to achieve the same level of reliabilty. For example, a safety margin of 1 MPa between Ed and Rd does mean less safety for a material with a standard deviation $σ_M$ = 100 MPa than it does for a material with a standard deviation $σ_M$ = 10 MPa (why?). To this end, the reliability index β is defined as a function of the spread of the variables E and R. First, an auxilary reliability function {eq}`reliability` is defined. Furthermore, we also need equations for the mean {eq}`mu_Z` and standard deviation {eq}`sigma_Z` of the reliability Z.\n",
+    "The \"safety distance\" should somehow be numerically linked to the accepted level of failure probability. Understandably, the higher the standard deviation of either or both variables $E$ and $R$, the higher the safety distance should be to achieve the same level of reliabilty. For example, a safety margin of 1 MPa between $Ed$ and $Rd$ does mean less safety for a material with a standard deviation $σ_M$ = 100 MPa than it does for a material with a standard deviation $σ_M$ = 10 MPa. To this end, the reliability index β is defined as a function of the spread of the variables E and R. First, an auxilary reliability function {eq}`reliability` is defined. Furthermore, we also need equations for the mean {eq}`mu_Z` and standard deviation {eq}`sigma_Z` of the reliability $Z$.\n",
     "\n",
     "$$\n",
     "Z = R - E\n",
@@ -107,7 +102,7 @@
     "\\sigma_Z = \\sqrt{\\sigma_R^2 + \\sigma_E^2}\n",
     "$$(sigma_Z)\n",
     "\n",
-    "The reliability index of this particular example can now be calculated as the proportion between the average and the standard deviation as in equation {eq}`beta`. For our particular example ({ref}`example`) β = 6.8. Using the image in {ref}`failure_prob`, we can conclude that with this value of β the probability of failure is very small: Pf ≪ 10−8, and that we could have done with a higher E or smaller R or both and still be okay.\n",
+    "The reliability index of this particular example can now be calculated as the proportion between the average and the standard deviation as in equation {eq}`beta`. For our particular example β = 6.8. Using the table below, we can conclude that with this value of β the probability of failure is very small: $Pf$ ≪ 10−8, and that we could have done with a higher $E$ or smaller $R$ or both and still be okay.\n",
     "\n",
     "$$\n",
     "\\beta = \\frac{\\mu_z}{\\sigma_z}\n",
@@ -116,14 +111,17 @@
     "```{figure} Images/failure_prob_rel.png\n",
     "---\n",
     "---\n",
-    ":name: failure_prob\n",
     "Relation between failure probability Pf and reliability index β\n",
     "(prNEN-EN-1990 2021, table C.2)\n",
     "```\n",
     "\n",
     "## Python implementation\n",
     "\n",
-    "If you are interested in the background of the functions, implemented in python to obtain fast numerical results, you can find those in the [safety calculation examples](../../calculation_examples/safety/effect_vs_resistance.ipynb). A calculation example is provided at the bottom of this page."
+    "If you are interested in the background of the functions, implemented in python to obtain fast numerical results, you can find those in the [safety calculation examples](../../calculation_examples/safety/effect_vs_resistance.ipynb). A calculation example is provided at the bottom of this page.\n",
+    "\n",
+    "\n",
+    "\n",
+    "[^1]: Schneider and Vrouwenvelder (2017, equation 4.44)"
    ]
   }
  ],
