--- a/book/design_workflow/general_loads/variable_loads_1_buildings.ipynb
+++ b/book/design_workflow/general_loads/variable_loads_1_buildings.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "Variable loads are loads which are not present during the whole lifetime\n",
-    "of the structure, or have variations in time which are not negligible.Examples\n",
+    "of the structure, or have variations in time which are not negligible. Examples\n",
     "of variable loads are persons, goods, vehicles, wind, accumulating water,\n",
     "earthquakes, collisions, loads during erection etcetera."
    ]
@@ -69,24 +69,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a The given value needs to be applied between the shelves. Underneath the shelves the following formula needs to be applied:  \n",
-    "    &ensp; $q_k = (A_1*γ_{bk}*h+A_2*p_0)/(A_1+A_2)$  \n",
-    "    &ensp; Where:  \n",
-    "    &ensp; $A_1$: Area beneath the shelves [$m^2$]  \n",
-    "    &ensp; $A_2$: Remaining area [$m^2$]  \n",
-    "    &ensp; $γ_{bk}$: Dead weight of books: 6 [$kg/m^3$]  \n",
-    "    &ensp; $p_0$: Action on floors between shelves: 2,5 [$kN/m^2$]  \n",
-    "    &ensp; $h$: Height of the shelves  \n",
+    "**a** The given value needs to be applied between the shelves. Underneath the shelves the following formula needs to be applied:  \n",
+    ">$$\n",
+    ">q_k = (A_1*γ_{bk}*h+A_2*p_0)/(A_1+A_2)\n",
+    ">$$\n",
+    ">\n",
+    ">$A_1$: Area beneath the shelves [$m^2$]  \n",
+    ">$A_2$: Remaining area [$m^2$]  \n",
+    ">$γ_{bk}$: Dead weight of books: 6 [$kg/m^3$]  \n",
+    ">$p_0$: Action on floors between shelves: 2,5 [$kN/m^2$]  \n",
+    ">$h$: Height of the shelves  \n",
     "\n",
-    "b The concentrated load is applied on a surface of $0,1 * 0,1 m^2$  \n",
+    "**b** The concentrated load is applied on a surface of $0,1 * 0,1 m^2$  \n",
     "\n",
-    "c The distributed load acts on a maximum area of $10 m^2$  \n",
+    "**c** The distributed load acts on a maximum area of $10 m^2$  \n",
     "\n",
-    "d Applied over an area of $0,5* 0,5 m^2$  \n",
+    "**d** Applied over an area of $0,5* 0,5 m^2$  \n",
     "\n",
-    "e Take impact loads into account  \n",
+    "**e** Take impact loads into account  \n",
     "\n",
-    "f Take water accumulation into account\n"
+    "**f** Take water accumulation into account\n"
    ]
   }
  ],
