--- a/book/design_workflow/general_loads/variable_loads_2_wind.ipynb
+++ b/book/design_workflow/general_loads/variable_loads_2_wind.ipynb
@@ -25,7 +25,9 @@
    "metadata": {},
    "source": [
     "## Determining the wind loading (simplified formula)\n",
-    "$F_i = c_s · c_d · c_f · q_p(z_e) · A_{ref}$\n",
+    "$$\n",
+    "F_i = c_s · c_d · c_f · q_p(z_e) · A_{ref}\n",
+    "$$\n",
     "\n",
     "$F_i$ = Wind force on a structure or structural component [$kN$]  \n",
     "$c_s * c_ d$ = Structural factor1 [-]  \n",
@@ -61,14 +63,14 @@
     "\n",
     "```{figure} Images/Positive_External_Pressure.png\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 40%\n",
     "---\n",
     "Positive external pressure.\n",
     "```\n",
     "\n",
     "```{figure} Images/Positive_Internal_Pressure.png\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 40%\n",
     "---\n",
     "Positive internal pressure.\n",
     "```"
@@ -92,7 +94,7 @@
     "\n",
     "```{figure} Images/Windbox.png\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 50%\n",
     "---\n",
     "Building parameters.\n",
     "```\n",
@@ -155,7 +157,7 @@
     "\n",
     "```{figure} Images/Windzones_Roofs1.png\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 50%\n",
     "---\n",
     "Flat roofs, both wind directions.\n",
     "```"
@@ -174,14 +176,14 @@
    "source": [
     "```{figure} Images/Windzones_Roofs2.png\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 50%\n",
     "---\n",
     "Duopitch roofs, ridge crosswind ($\\theta = 0$).\n",
     "```\n",
     "  \n",
     "```{figure} Images/Windzones_Roofs3.png\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 50%\n",
     "---\n",
     "Duopitch roofs, ridge parallel to ($\\theta = 90$).\n",
     "```\n",
@@ -233,7 +235,7 @@
     "\n",
     "```{figure} Images/Wind_Zones_Canopies1.png\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 75%\n",
     "---\n",
     "Wind zones on canopies side view.\n",
     "```\n",
@@ -245,7 +247,7 @@
     "\n",
     "```{figure} Images/Wind_Zones_Canopies2.png\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 50%\n",
     "---\n",
     "Wind zones on canopies top view.\n",
     "```\n",
@@ -257,7 +259,7 @@
     "\n",
     "```{figure} Images/Wind_Zones_Canopies3.png\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 75%\n",
     "---\n",
     "Wind zones on canopies for different blockages under the canopy.\n",
     "```\n",
@@ -340,7 +342,7 @@
    "source": [
     "```{figure} Images/Windzones_NL.png\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 50%\n",
     "---\n",
     "Windregions in the Netherlands.\n",
     "```"
