--- a/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
+++ b/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
@@ -31,8 +31,13 @@
     "| f    | 0.1625 | -0.0175| 0.1375 | -0.0500| -0.0250| 0.3250 | 1.3000 | 0.4250 | -0.0500|\n",
     "| g    | 0.2000 | -0.1000| -0.0375| 0.0250 | 0.0125 | 0.4000 | 0.7250 | -0.1500| 0.0250 |\n",
     "\n",
-    "$M = factor * F * L$  \n",
-    "$R = factor *x* F$\n",
+    "$$\n",
+    "M = factor * F * L\n",
+    "$$  \n",
+    "\n",
+    "$$\n",
+    "R = factor *x* F\n",
+    "$$\n",
     "\n",
     "The numbers in the tables are related to the concentrated loads working on the structure. The bending moments and support reactions in the designated points are found by multiplying the factors in the table with F x L or F.\n",
     "\n",
@@ -87,8 +92,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$M = factor * q * L^2$  \n",
-    "$R = factor * q * L$\n",
+    "$$\n",
+    "M = factor * q * L^2\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "R = factor * q * L\n",
+    "$$\n",
     "\n",
     "*) location of bending moment M(1) in relation to support 1 (distance = factor x L)  \n",
     "**) location of bending moment M(2) in relation to support 2 (distance = factor x L) \n",
