--- a/book/basics/steel/castellated_beams.ipynb
+++ b/book/basics/steel/castellated_beams.ipynb
@@ -10,7 +10,6 @@
     "\n",
     "```{figure} Images/castellated_beams_2.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
     "Castellated beams detail.\n",
     "```\n",
@@ -62,8 +61,8 @@
     "The tables depicted below are a selection of the available sections [^1].\n",
     "```{figure} Images/castellated_section_profile.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
+    "Castellated section profile\n",
     "```\n",
     "\n",
     "#### Based on IPE180\n",
@@ -76,7 +75,7 @@
     "| 370  | 20.6   | 45   | 280  | 100  | 34     | 6943   | 375    | 221    | 19     | 5973   | 323    | 169    |\n",
     "| 420  | 21.3   | 45   | 330  | 150  | 37     | 9370   | 446    | 265    | 19     | 7783   | 371    | 193    |\n",
     "\n",
-    "```{admonition} *Properties IPE180\n",
+    "```{admonition} Properties IPE180\n",
     "$h = 180 \\ mm$  \n",
     "$b = 91 \\ mm$  \n",
     "$d = 5.3 \\ mm$  \n",
@@ -96,7 +95,7 @@
     "| 460  | 33     | 60   | 340  | 100  | 53     | 17241  | 750    | 436    | 32     | 15210  | 661    | 346    |\n",
     "| 510  | 33.8   | 60   | 390  | 150  | 56     | 21937  | 860    | 504    | 32     | 18872  | 740    | 386    |\n",
     "\n",
-    "```{admonition} *Properties IPE240\n",
+    "```{admonition} Properties IPE240\n",
     "$h = 240 \\ mm$  \n",
     "$b = 120 \\ mm$  \n",
     "$d = 6.2 \\ mm$  \n",
@@ -117,7 +116,7 @@
     "| 600  | 45.8   | 75   | 450  | 150  | 75     | 40912  | 1364   | 798    | 43     | 35520  | 1184   | 618    |\n",
     "\n",
     "\n",
-    "```{admonition} *Properties IPE300\n",
+    "```{admonition} Properties IPE300\n",
     "$h = 300 \\ mm$  \n",
     "$b = 150 \\ mm$  \n",
     "$d = 7.1 \\ mm$  \n",
@@ -138,7 +137,7 @@
     "| 740  | 62.5   | 90   | 560  | 200  | 103    | 84907  | 2295   | 1345   | 58     | 73199  | 1978   | 1031   |\n",
     "\n",
     "\n",
-    "```{admonition} *Properties IPE360\n",
+    "```{admonition} Properties IPE360\n",
     "$h = 360 \\ mm$  \n",
     "$b = 170 \\ mm$  \n",
     "$d = 8 \\ mm$  \n",
@@ -152,8 +151,8 @@
     "The tables depicted below are a selection of the available sections [^1].\n",
     "```{figure} Images/castellated_section_profile.png\n",
     "---\n",
-    "align: right\n",
     "---\n",
+    "Castellated section profile\n",
     "```\n",
     "\n",
     "#### Based on HEA180\n",
@@ -166,7 +165,7 @@
     "| 357  | 37.8   | 42.8 | 271  | 100  | 56     | 12748  | 715    | 398    | 40     | 11753  | 659    | 343    |\n",
     "| 407  | 38.6   | 42.8 | 321  | 150  | 59     | 17088  | 841    | 470    | 40     | 15434  | 759    | 393    |\n",
     "\n",
-    "```{admonition} *Properties HEA180\n",
+    "```{admonition} Properties HEA180\n",
     "$h = 171 \\ mm$  \n",
     "$b = 180 \\ mm$  \n",
     "$d = 6 \\ mm$  \n",
@@ -186,7 +185,7 @@
     "| 445  | 63.5   | 57.5 | 330   | 100  | 93     | 33273  | 1495   | 829    | 68     | 31027  | 1394   | 727    |\n",
     "| 495  | 64.5   | 57.5 | 380   | 150  | 97     | 42148  | 1703   | 947    | 68     | 38719  | 1564   | 812    |\n",
     "\n",
-    "```{admonition} *Properties HEA240\n",
+    "```{admonition} Properties HEA240\n",
     "$h = 230 \\ mm$  \n",
     "$b = 240 \\ mm$  \n",
     "$d = 7.5 \\ mm$  \n",
@@ -206,7 +205,7 @@
     "| 565  | 101.9  | 77.5  | 410   | 100  | 147    | 85906  | 3041   | 1680   | 110    | 80737  | 2858   | 1491   |\n",
     "| 615  | 103.1  | 77.5  | 460   | 150  | 152    | 103637 | 3370   | 1867   | 110    | 96337  | 3133   | 1629   |\n",
     "\n",
-    "```{admonition} *Properties HEA300\n",
+    "```{admonition} Properties HEA300\n",
     "$h = 310 \\ mm$  \n",
     "$b = 300 \\ mm$  \n",
     "$d = 9 \\ mm$  \n",
@@ -226,7 +225,7 @@
     "| 625  | 116.9  | 87.5  | 450   | 100  | 170    | 119246 | 3816   | 2120   | 125    | 111652 | 3573   | 1867   |\n",
     "| 675  | 118.2  | 87.5  | 500   | 150  | 175    | 141523 | 4193   | 2336   | 125    | 131106 | 3885   | 2024   |\n",
     "\n",
-    "```{admonition} *Properties HEA360\n",
+    "```{admonition} Properties HEA360\n",
     "$h = 350 \\ mm$  \n",
     "$b = 300 \\ mm$  \n",
     "$d = 10 \\ mm$  \n",
@@ -246,7 +245,7 @@
     "| 760  | 145.5  | 110    | 540    | 100  | 215    | 215345 | 5667   | 3179   | 153    | 200255 | 5270   | 2760   |\n",
     "| 810  | 147    | 110    | 590    | 150  | 221    | 248493 | 6136   | 3451   | 153    | 228811 | 5650   | 2951   |\n",
     "\n",
-    "```{admonition} *Properties HEA400\n",
+    "```{admonition} Properties HEA400\n",
     "$h = 390 \\ mm$  \n",
     "$b = 300 \\ mm$  \n",
     "$d = 11 \\ mm$  \n",
