--- a/book/basics/timber/material_characteristics_timber.ipynb
+++ b/book/basics/timber/material_characteristics_timber.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Material characteristics\n",
+    "# Material characteristics timber\n",
     "\n",
     "This section contains tables with the material properties of the different timber strength classes. With the aid of a modification factor the characteristic values are adapted to the local environment and use.\n",
     "\n",
@@ -43,15 +43,15 @@
     "|-------|--------------------------------------------------------------------------------------------------------------|-------------------|\n",
     "| 1     | Situations in which the wood or wood-based product is inside a construction, not exposed to the weather and wetting. | roof beam         |\n",
     "| 2     | Situations in which the wood or wood-based product is under cover and not exposed to the weather (particularly rain and driven rain) but where occasional, but not persistent, wetting can occur. | beam of open canopy |\n",
-    "| 3     | Situations in which the wood or wood-based product is above ground and exposed to the weather (particularly rain) | external column  |\n",
-    "| 4     | A situation in which the wood or wood-based product is in direct contact with ground and/or fresh water      | foundation pile  |\n",
-    "| 5     | A situation in which the wood or wood-based product is permanently or regularly submerged in salt water (i.e. sea water and brackish water) | sea lock gate     |\n",
+    "| 3     | Situations in which the wood or wood-based product is above ground and exposed to the weather (particularly rain). | external column  |\n",
+    "| 4     | A situation in which the wood or wood-based product is in direct contact with ground and/or fresh water.      | foundation pile  |\n",
+    "| 5     | A situation in which the wood or wood-based product is permanently or regularly submerged in salt water (i.e. sea water and brackish water). | sea lock gate     |\n",
     "\n",
     "## Service classes\n",
     "\n",
     "| Service class | Environment | R.H. in construction                   | Use class |\n",
     "|---------------|-------------------------|----------------------------|-----------|\n",
-    "| 1             | Relative humidity exceeding 65% only a few weeks per year. Temperature 20°C,  | 12% R.H. | 1         |\n",
+    "| 1             | Relative humidity exceeding 65% only a few weeks per year. Temperature 20°C  | 12% R.H. | 1         |\n",
     "| 2             | Relative humidity exceeding 85% only a few weeks per year. Temperature 20°C  | 20% R.H. | 1         |\n",
     "| 2             | If the component is in a situation where it could be subjected to prolonged wetting by liquid water e.g. condensation | 20% R.H.| 2         |\n",
     "| 3             | Climatic conditions leading to higher moisture contents than in service class 2 | > 20% R.H. | 3 or higher if used externally |\n",
@@ -168,10 +168,13 @@
     "## Final deflection\n",
     "\n",
     "The final deflection in SLS including creep effects is defined as:  \n",
-    "$u_{fin} = u_{fin;G} + u_{fin;Q;1} + \\Sigma u_{fin;Q;i}$  \n",
-    "$u_{fin;G} = u_{inst;G} \\cdot (1 + k_{def})$  \n",
-    "$u_{fin;Q;1} = u_{inst;Q;1} \\cdot (1 + \\psi_{2,1} \\cdot k_{def})$  \n",
-    "$u_{fin;Q;i} = u_{inst;Q;i} \\cdot (\\psi_0 + \\psi_{2,i} \\cdot k_{def})$  \n",
+    "\n",
+    "\\begin{gather*}\n",
+    "u_{fin} = u_{fin;G} + u_{fin;Q;1} + \\Sigma u_{fin;Q;i}\\\\  \n",
+    "u_{fin;G} = u_{inst;G} \\cdot (1 + k_{def})\\\\\n",
+    "u_{fin;Q;1} = u_{inst;Q;1} \\cdot (1 + \\psi_{2,1} \\cdot k_{def})\\\\  \n",
+    "u_{fin;Q;i} = u_{inst;Q;i} \\cdot (\\psi_0 + \\psi_{2,i} \\cdot k_{def})\n",
+    "\\end{gather*}\n",
     "\n",
     "Where:  \n",
     "$u_{fin}$ = final deflection  \n",
@@ -179,7 +182,7 @@
     "$u_G$ = deflection under permanent load  \n",
     "$u_{Q;1}$ = deflection under leading variable load  \n",
     "$u_{Q;i}$ = deflection under other variable load  \n",
-    "$\\Psi_0$ = load combination factor (see also |general|loads|)  \n",
+    "$\\Psi_0$ = load combination factor (see also general loads)  \n",
     "$\\Psi_2$ = factor for quasi permanent value of variable load i  \n",
     "$k_{def}$ = creep factor"
    ]
