--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -27,6 +27,7 @@
     "\n",
     "```{figure} Images/Load-Bearing_Floor_Plan.jpg\n",
     "---\n",
+    "scale: 75%\n",
     "---\n",
     "Schematic load-bearing floor plan, first floor office building.\n",
     "```\n",
@@ -46,16 +47,24 @@
     "$g = b × h × ρ × \\frac{10}{1000} \\ [kN/m]$ (here $b$ and $h$ in meters!)\n",
     "\n",
     "For a rectangular cross-section, we can easily calculate the resistance moment $W$ and the quadratic area moment $I$.\n",
-    "$I = \\frac{1}{12} × b × h³ \\ [mm⁴]$  \n",
-    "$W = \\frac{I}{\\frac{1}{2} h} = \\frac{1}{6} × b × h² \\ [mm³]$\n",
+    "\\begin{gather*}\n",
+    "I = \\frac{1}{12} × b × h³ \\ [mm⁴]\\\\\n",
+    "W = \\frac{I}{\\frac{1}{2} h} = \\frac{1}{6} × b × h² \\ [mm³]\n",
+    "\\end{gather*}\n",
+    "\n",
     "\n",
     "````{note}\n",
     "For the concrete structure, we use an in-situ cast, non-prestressed concrete beam. We choose strength class C30/37. According to the estimation rule, the height h would be equal to $\\frac{6000}{10} = 600 \\ [mm]$. For the corresponding width, we choose half the height (estimation rule): $\\frac{600}{2} = 300 \\ [mm]$. The weight per linear meter is then:  \n",
     "0.3 [m] × 0.6 [m] × 2500 [kg/m³] × 10 [m/s²] / 1000 = 4.5 [kN/m]\n",
     "\n",
     "We can calculate $I$ and $W$ using the above formulas.  \n",
-    "$I_y = \\frac{1}{12} × 300 [mm] × 600 [mm³] = 5.40 × 10⁹ \\ [mm⁴]$  \n",
-    "$W_y = \\frac{I}{\\frac{1}{2} h} = \\frac{1}{6} × 300 [mm] × 600 [mm²] = 18.0 × 10⁶ \\ [mm³]$\n",
+    "$$\n",
+    "I_y = \\frac{1}{12} × 300 [mm] × 600 [mm³] = 5.40 × 10⁹ \\ [mm⁴]\n",
+    "$$  \n",
+    "\n",
+    "$$\n",
+    "W_y = \\frac{I}{\\frac{1}{2} h} = \\frac{1}{6} × 300 [mm] × 600 [mm²] = 18.0 × 10⁶ \\ [mm³]\n",
+    "$$\n",
     "\n",
     "The values for strength and modulus of elasticity can be obtained from the concrete tables in the Material Properties Concrete section. It is advisable to neatly organize the beam data, for example, in a table as shown below.\n",
     "\n",
@@ -63,8 +72,6 @@
     "|----------------|---------------|---------------|-----------|-----------|----------------|------------------|----------------|\n",
     "| 600            | 600x300       | 4.5           | 18.0 × 10⁶|5.40 × 10⁹ |         C30/37 |         20 × 10³ |       33 × 10³ |\n",
     "\n",
-    "+++\n",
-    "{bdg-secondary}`Concrete`\n",
     "````"
    ]
   },
@@ -91,14 +98,16 @@
     "- $q_{ob}$ = Opgelegde belasting (veranderlijke belasting) op de ligger.\n",
     "\n",
     "```{figure} Images/Loads_Beam.jpg\n",
+    "---\n",
+    "scale: 40%\n",
+    "---\n",
     "```\n",
     "\n",
     "$q_{eg}$ and $q_{rb}$ together form the permanent load $q_G$. The imposed load $q_{ob}$ is the variable load $q_Q$. For beam verification, the loads must be calculated per linear meter on the beam, unless the load is applied as a point load on the beam. We assume a uniformly distributed load.\n",
     "\n",
     "```{note}\n",
     "The weight of the concrete beam has also already been calculated: $q_{eg}$ = 4.5 [kN/m].\n",
-    "+++\n",
-    "{bdg-secondary}`Concrete`\n",
+    "\n",
     "```\n",
     "\n",
     "```{note}\n",
@@ -112,6 +121,9 @@
     "In the figure below, the elements of the resting load for the construction are schematically depicted.\n",
     "\n",
     "```{figure} Images/Concrete_Hollow_Core_Slab_Structure.jpg\n",
+    "---\n",
+    "scale: 25%\n",
+    "---\n",
     "```\n",
     "\n",
     "From top to bottom, we first see a finish layer of $50 [mm]$. The volumetric mass of the finish layer material is $2400 [kg/m³]$.\n",
@@ -133,6 +145,9 @@
     "So, the total permanent load of the floor is $3.1 [kN/m²] + 1.2 [kN/m²] + 0.6 [kN/m²] = 4.9 [kN/m²]$.\n",
     "\n",
     "```{figure} Images/Load-Bearing_Floor_Plan_Loads.jpg\n",
+    "---\n",
+    "scale: 75%\n",
+    "---\n",
     "```\n",
     "\n",
     "The found load per square meter [kN/m^2] needs to be converted to a distributed load on the beam, or rather a load per linear meter of beam [kN/m]. To determine its magnitude, we use the schematic load-bearing floor plan. On the beam, we mark a distance of 1 meter and shade the area supported by this meter of the beam. The size of this area is equal to two times the half center-to-center distance of the beams times 1 meter.\n",
@@ -142,13 +157,15 @@
     "For edge beams, of course, only half the center-to-center distance applies.\n",
     "\n",
     "```{figure} Images/Schematic_Load-Bearing_Floor_Plan_Loads.jpg\n",
+    "---\n",
+    "scale: 75%\n",
+    "---\n",
     "```\n",
     "\n",
     "```{note}\n",
     "For a concrete beam with a center-to-center distance of 8 meters:\n",
     "$q_{rb} = \\frac{8}{2} + \\frac{8}{2} \\times 4.9 [kN/m^2] = 39.2 [kN/m]$\n",
-    "+++\n",
-    "{bdg-secondary}`Concrete`\n",
+    "\n",
     "```\n",
     "\n",
     "```{note}\n",
@@ -158,8 +175,7 @@
     "```{note}\n",
     "For the imposed load on the concrete beam, the following applies:\n",
     "$q_Q = q_{ob} = (\\frac{8}{2} + \\frac{8}{2}) \\cdot 3 [kN/m^2] = 24 [kN/m]$\n",
-    "+++\n",
-    "{bdg-secondary}`Concrete`\n",
+    "\n",
     "```"
    ]
   },
@@ -187,11 +203,15 @@
     "\n",
     "According to Eurocode 1990, the permanent load may be reduced by a reduction factor $ξ$. This is set at 0.89 in the National Annex to the Eurocode. For most buildings (including offices), $\\gamma_{G}$ is 1.35 and $\\gamma_{Q}$ is 1.5. The partial factor for the permanent load is multiplied by the reduction factor: $0.89 × 1.35 = 1.2$ (the value of the former load factor for the permanent load). We will use this value as the partial factor for the permanent load. Therefore, for the office building: $q_{ULS} = 1.2 \\cdot q_G + 1.5 \\cdot q_Q$. With these quantities, we can calculate the moment and thus the bending stress, and then check the strength by performing the unity check (U.C.):\n",
     "\n",
-    "$U.C. = \\frac{\\sigma_{m,d}}{f_{m,d}} <= 1.0$\n",
+    "$$\n",
+    "U.C. = \\frac{\\sigma_{m,d}}{f_{m,d}} <= 1.0\n",
+    "$$\n",
     "\n",
     "If the $U.C. > 1.0$, then a stronger profile is needed. For the $W_{required}$ of the new profile, the following applies:\n",
     "\n",
-    "$W_{required} = U.C. \\cdot W_{old}$\n",
+    "$$\n",
+    "W_{required} = U.C. \\cdot W_{old}\n",
+    "$$\n",
     "\n",
     "````{margin}\n",
     "**M-lines**\n",
@@ -225,8 +245,7 @@
     "$g = 4.73 [kN/m]$, $W = 19.85 \\cdot 10^6 [mm^3]$, and $I = 6251.2 \\cdot 10^6 [mm^4]$.\n",
     "\n",
     "If we want to limit the construction height, we can choose (prefabricated) concrete with a higher strength class. C35/45 with an $f_{m;d} = f_{c;d} = 23.3 [N/mm^2]$. For this strength class, the beam $600 \\cdot 300 [mm^2]$ will comply.\n",
-    "+++\n",
-    "{bdg-secondary}`Concrete`\n",
+    "\n",
     "```"
    ]
   },
@@ -244,25 +263,35 @@
     "\n",
     "To check the stiffness, we examine the Serviceability Limit State (SLS), also known as the stiffness of the beam. In section Serviceability Limit States section, you will find all the provisions applicable to this limit state. The stiffness determines the amount of deflection: the stiffer the beam, the less the deflection. The formulas for the deformation of standard cases (reminders) can be found in the Mechanics section. For a simply supported beam, the formula is:\n",
     "\n",
-    "$w=\\frac{5}{384}\\cdot \\dfrac{ql^4}{EI}$\n",
+    "$$\n",
+    "w=\\frac{5}{384}\\cdot \\dfrac{ql^4}{EI}\n",
+    "$$\n",
     "\n",
     "For the SLS, there are two checks: the additional deflection $w_{in}$ and the deflection in the final state $w_{max}$. The requirement for the maximum deflection is an aesthetic one, while that for the additional deflection is more a matter of comfort: does one feel safe if a beam deflects too much. Moreover, an excessive $w_{inf}$ can lead to damage in walls placed on the floor, while the finishing layer of the floors could also crack.\n",
     "\n",
     "The maximum deflection $w_{max}$ is the total deformation $w_{fin}$ due to the load, including any creep, minus any camber provided:\n",
     "\n",
-    "$w_{max} = w_{fin} - camber$\n",
+    "$$\n",
+    "w_{max} = w_{fin} - camber\n",
+    "$$\n",
     "\n",
     "A camber is an upward curve provided in advance to reduce the deflection due to the permanent load $w_{G}$ = $w_{on}$. The final deformation $w_{fin}$ is the sum of the instantaneous deformation and the additional infinite deformation:\n",
     "\n",
-    "$w_{fin} = w_{inst} + w_{inf}$\n",
+    "$$\n",
+    "w_{fin} = w_{inst} + w_{inf}\n",
+    "$$\n",
     "\n",
     "The additional infinite deflection $w_{inf}$ is the deformation that occurs due to the variable load and any creep. Creep occurs in materials such as wood and concrete under long-term load. This is the permanent load and that part of the variable (imposed) load that is almost permanently present:\n",
     "\n",
-    "$w_{inf} = w_{Q} + w_{cr}$\n",
+    "$$\n",
+    "w_{inf} = w_{Q} + w_{cr}\n",
+    "$$\n",
     "\n",
     "There is a relationship between creep and the permanent and quasi-permanent load. The creep is expressed as:\n",
     "\n",
-    "$w_{cr} = k \\cdot (w_G + \\psi_2 \\cdot w_Q)$\n",
+    "$$\n",
+    "w_{cr} = k \\cdot (w_G + \\psi_2 \\cdot w_Q)\n",
+    "$$\n",
     "\n",
     "Here, $k$ = creep factor and $\\psi_2$ = quasi-permanent load factor.\n",
     "\n",
@@ -274,35 +303,49 @@
     "\n",
     "The factor $\\psi_2$ depends on the building function. In the Loads section, the factors for all building functions are provided. For offices and residential buildings, $\\psi_2 = 0.3$. The factor $k$ depends on the material. In the Material Properties section, the factors for different materials are given. Steel has a creep factor $k = 0$ and thus $w_{kr} = 0$. For wood, $k = 0.8$ (climate class 2), making:\n",
     "\n",
-    "$w_{kr} = 0.8 \\cdot (w_G + 0.3 \\cdot w_Q)$\n",
+    "$$\n",
+    "w_{kr} = 0.8 \\cdot (w_G + 0.3 \\cdot w_Q)\n",
+    "$$\n",
     "\n",
     "In reinforced concrete, deflection is increased not only by creep but also by cracking in the tension zone of the concrete. The calculation of this is quite complex and exceeds the scope of this guide. A reasonable approximation for dry concrete is obtained with a creep factor $k$ = 3, making:\n",
     "\n",
-    "$w_{kr} = 3 \\cdot (w_G + 0.3 \\cdot w_Q)$\n",
+    "$$\n",
+    "w_{kr} = 3 \\cdot (w_G + 0.3 \\cdot w_Q)\n",
+    "$$\n",
     "\n",
     "In steel, the modulus of elasticity is independent of the strength class. In wood, it depends not only on the strength class but also on the fibre direction and the limit state. For the deflection of a wooden beam, we must use $E_{0,mean}$, and for laminated beams, $E_{0,gl,mean}$ (see Material Properties Wood). In concrete, the modulus of elasticity depends on the strength class and the limit state. For deflection (SLS), we must use the value for $E_{cm}$ (see the section Material Properties Concrete).\n",
     "\n",
     "For a floor beam, the general requirement is:\n",
     "\n",
-    "$w_{inf} \\leq w_{inf;norm} = 0.003 \\times l$\n",
+    "$$\n",
+    "w_{inf} \\leq w_{inf;norm} = 0.003 \\times l\n",
+    "$$\n",
     "\n",
     "If the beam is located near a wall or in the facade, then:\n",
     "\n",
-    "$w_{inf} \\leq w_{inf;norm} = 0.002 \\cdot l$\n",
+    "$$\n",
+    "w_{inf} \\leq w_{inf;norm} = 0.002 \\cdot l\n",
+    "$$\n",
     "\n",
     "The unity check thus becomes:\n",
     "\n",
-    "$U.C. = \\dfrac{w_{inf}}{w_{inf,norm}} \\leq 1.0$\n",
+    "$$\n",
+    "U.C. = \\dfrac{w_{inf}}{w_{inf,norm}} \\leq 1.0\n",
+    "$$\n",
     "\n",
     "If the U.C. $>$ 1, a heavier profile must be chosen. For the required moment of inertia $I_{necessary}$ of the new profile, the following applies:\n",
     "\n",
-    "$I_{necessary} = \\text{U.C.} \\cdot I_{oud}$\n",
+    "$$\n",
+    "I_{necessary} = \\text{U.C.} \\cdot I_{oud}\n",
+    "$$\n",
     "\n",
     "The formulas for $W_{necessary}$ and $I_{necessary}$ can also be used for both ULS and SLS if the U.C. $<<$ 1. A slimmer, thus cheaper and more sustainable profile can suffice. The larger of the two values of U.C. is then obviously the starting point.\n",
     "\n",
     "We also note that for the maximum deflection of a floor:\n",
     "\n",
-    "$u_{max} \\leq 0.004 \\cdot l$\n",
+    "$$\n",
+    "u_{max} \\leq 0.004 \\cdot l\n",
+    "$$\n",
     "\n",
     "For a roof beam, both $w_{inf}$ and $w_{fin}$ must be less than $0.004 \\cdot l$.\n",
     "\n",
@@ -332,8 +375,7 @@
     "The beam amply meets the deflection requirement, so we see that strength is the governing factor. With strength class C35/45, a beam $b \\cdot h = 300 \\cdot 600 [mm^2]$ meets the requirement. Usually, the cross-sectional dimensions are rounded to multiples of 50 mm. Therefore, we choose the beam with strength class C35/45. This beam has a weight:\n",
     "\n",
     "$0.3 [m] \\cdot 0.6 [m] \\cdot 25 [kN/m^3] = 4.5 [kN/m]$\n",
-    "+++\n",
-    "{bdg-secondary}`Concrete`\n",
+    "\n",
     "```\n",
     "````{margin}\n",
     "**Structural Design Ready**\n",
