--- a/book/calculation_examples/steel/beam.ipynb
+++ b/book/calculation_examples/steel/beam.ipynb
@@ -23,6 +23,7 @@
     "\n",
     "```{figure} ../concrete/Images/Load-Bearing_Floor_Plan.jpg\n",
     "---\n",
+    "scale: 75%\n",
     "---\n",
     "Schematic load-bearing floor plan, first floor office building.\n",
     "```\n",
@@ -36,8 +37,7 @@
     "\n",
     "```{note}\n",
     "For the steel structure, we apply an HEA section with strength class S235. This means that the calculation value for the steel strength is equal to 235 N/mm². For steel, the modulus of elasticity E for all strength classes equals to 210 × 10³ N/mm².\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
+    "\n",
     "```\n",
     "\n",
     "A HEA section features wide flanges, providing ample bearing width for the channel plates. Using the estimation rule, we estimate the height of a profile and note down the profile number and the data required for the verification calculation. These include: the weight of the beam per linear meter, the resistance moment $W_y$, and the quadratic area moment $I_y$.\n",
@@ -63,8 +63,7 @@
     "width: 400px\n",
     "---\n",
     "```\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
+    "\n",
     "````"
    ]
   },
@@ -91,14 +90,16 @@
     "- $q_{ob}$ = Opgelegde belasting (veranderlijke belasting) op de ligger.\n",
     "\n",
     "```{figure} ../concrete/Images/Loads_Beam.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```\n",
     "\n",
     "$q_{eg}$ and $q_{rb}$ together form the permanent load $q_G$. The imposed load $q_{ob}$ is the variable load $q_Q$. For beam verification, the loads must be calculated per linear meter on the beam, unless the load is applied as a point load on the beam. We assume a uniformly distributed load.\n",
     "\n",
     "```{note}\n",
     "The weight per linear meter of the beam (beam 3B-3D on the load-bearing floor plan) has already been determined while collecting the beam data: $q_{eg} = 0.98 [kN/m]$.\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
+    "\n",
     "```\n",
     "\n",
     "```{note}\n",
@@ -112,6 +113,9 @@
     "In the figure below, the elements of the resting load for the construction are schematically depicted.\n",
     "\n",
     "```{figure} ../concrete/Images/Concrete_Hollow_Core_Slab_Structure.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```\n",
     "\n",
     "From top to bottom, we first see a finish layer of $50 [mm]$. The volumetric mass of the finish layer material is $2400 [kg/m³]$.\n",
@@ -133,6 +137,9 @@
     "So, the total permanent load of the floor is $3.1 [kN/m²] + 1.2 [kN/m²] + 0.6 [kN/m²] = 4.9 [kN/m²]$.\n",
     "\n",
     "```{figure} ../concrete/Images/Load-Bearing_Floor_Plan_Loads.jpg\n",
+    "---\n",
+    "scale: 75%\n",
+    "---\n",
     "```\n",
     "\n",
     "The found load per square meter [kN/m^2] needs to be converted to a distributed load on the beam, or rather a load per linear meter of beam [kN/m]. To determine its magnitude, we use the schematic load-bearing floor plan. On the beam, we mark a distance of 1 meter and shade the area supported by this meter of the beam. The size of this area is equal to two times the half center-to-center distance of the beams times 1 meter.\n",
@@ -142,13 +149,15 @@
     "For edge beams, of course, only half the center-to-center distance applies.\n",
     "\n",
     "```{figure} ../concrete/Images/Schematic_Load-Bearing_Floor_Plan_Loads.jpg\n",
+    "---\n",
+    "scale: 75%\n",
+    "---\n",
     "```\n",
     "\n",
     "```{note}\n",
     "For a steel beam with a center-to-center distance of 8 meters:\n",
     "$q_{rb} = \\frac{8}{2} + \\frac{8}{2} \\times 4.9 [kN/m^2] = 39.2 [kN/m]$\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
+    "\n",
     "```\n",
     "\n",
     "```{note}\n",
@@ -158,8 +167,7 @@
     "```{note}\n",
     "For the imposed load on the steel beam, the following applies:\n",
     "$q_Q = q_{ob} = (\\frac{8}{2} + \\frac{8}{2}) \\cdot 3 [kN/m^2] = 24 [kN/m]$\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
+    "\n",
     "```"
    ]
   },
@@ -173,7 +181,9 @@
     "The bending stress $\\sigma_{m;d} = \\frac{M_d}{W}$, where $W$ is the previously determined section modulus and $M_d$ is the maximum moment in the middle of the span (Figure 14).\n",
     "\n",
     "For the maximum moment: \n",
-    "$M_d = /frac{1}{8} \\cdot q_d \\cdot l^2$\n",
+    "$$\n",
+    "M_d = /frac{1}{8} \\cdot q_d \\cdot l^2\n",
+    "$$\n",
     "where $l$ is the length of the beam and $q$ is the total line load. Be consistent with the units!\n",
     "\n",
     "```{figure} ../concrete/Images/Maximum_Moment_Beam.jpg\n",
@@ -187,11 +197,15 @@
     "\n",
     "According to Eurocode 1990, the permanent load may be reduced by a reduction factor $ξ$. This is set at 0.89 in the National Annex to the Eurocode. For most buildings (including offices), $\\gamma_{G}$ is 1.35 and $\\gamma_{Q}$ is 1.5. The partial factor for the permanent load is multiplied by the reduction factor: $0.89 × 1.35 = 1.2$ (the value of the former load factor for the permanent load). We will use this value as the partial factor for the permanent load. Therefore, for the office building: $q_{ULS} = 1.2 \\cdot q_G + 1.5 \\cdot q_Q$. With these quantities, we can calculate the moment and thus the bending stress, and then check the strength by performing the unity check (U.C.):\n",
     "\n",
-    "$U.C. = \\frac{\\sigma_{m,d}}{f_{m,d}} <= 1.0$\n",
+    "$$\n",
+    "U.C. = \\frac{\\sigma_{m,d}}{f_{m,d}} <= 1.0\n",
+    "$$\n",
     "\n",
     "If the $U.C. > 1.0$, then a stronger profile is needed. For the $W_{required}$ of the new profile, the following applies:\n",
     "\n",
-    "$W_{required} = U.C. \\cdot W_{old}$\n",
+    "$$\n",
+    "W_{required} = U.C. \\cdot W_{old}\n",
+    "$$\n",
     "\n",
     "````{margin}\n",
     "**M-lines**\n",
@@ -228,8 +242,7 @@
     "In the steel profiles App, we see that this corresponds to an HE340A with $g = 1.05 [kN/m]$, $W = 1678 \\cdot 10^3 [mm^3]$, and $I = 27693 \\cdot 10^4 [mm^4]$.\n",
     "\n",
     "If we want to limit the construction height, we can also choose an HEB profile (HE300B) or a higher strength class (S355; see BGT check).\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
+    "\n",
     "```"
    ]
   },
@@ -247,25 +260,35 @@
     "\n",
     "To check the stiffness, we examine the Serviceability Limit State (SLS), also known as the stiffness of the beam. In section Serviceability Limit States section, you will find all the provisions applicable to this limit state. The stiffness determines the amount of deflection: the stiffer the beam, the less the deflection. The formulas for the deformation of standard cases (reminders) can be found in the Mechanics section. For a simply supported beam, the formula is:\n",
     "\n",
-    "$w=\\frac{5}{384}\\cdot \\dfrac{ql^4}{EI}$\n",
+    "$$\n",
+    "w=\\frac{5}{384}\\cdot \\dfrac{ql^4}{EI}\n",
+    "$$\n",
     "\n",
     "For the SLS, there are two checks: the additional deflection $w_{in}$ and the deflection in the final state $w_{max}$. The requirement for the maximum deflection is an aesthetic one, while that for the additional deflection is more a matter of comfort: does one feel safe if a beam deflects too much. Moreover, an excessive $w_{inf}$ can lead to damage in walls placed on the floor, while the finishing layer of the floors could also crack.\n",
     "\n",
     "The maximum deflection $w_{max}$ is the total deformation $w_{fin}$ due to the load, including any creep, minus any camber provided:\n",
     "\n",
-    "$w_{max} = w_{fin} - camber$\n",
+    "$$\n",
+    "w_{max} = w_{fin} - camber\n",
+    "$$\n",
     "\n",
     "A camber is an upward curve provided in advance to reduce the deflection due to the permanent load $w_{G}$ = $w_{on}$. The final deformation $w_{fin}$ is the sum of the instantaneous deformation and the additional infinite deformation:\n",
     "\n",
-    "$w_{fin} = w_{inst} + w_{inf}$\n",
+    "$$\n",
+    "w_{fin} = w_{inst} + w_{inf}\n",
+    "$$\n",
     "\n",
     "The additional infinite deflection $w_{inf}$ is the deformation that occurs due to the variable load and any creep. Creep occurs in materials such as wood and concrete under long-term load. This is the permanent load and that part of the variable (imposed) load that is almost permanently present:\n",
     "\n",
-    "$w_{inf} = w_{Q} + w_{cr}$\n",
+    "$$\n",
+    "w_{inf} = w_{Q} + w_{cr}\n",
+    "$$\n",
     "\n",
     "There is a relationship between creep and the permanent and quasi-permanent load. The creep is expressed as:\n",
     "\n",
-    "$w_{cr} = k \\cdot (w_G + \\psi_2 \\cdot w_Q)$\n",
+    "$$\n",
+    "w_{cr} = k \\cdot (w_G + \\psi_2 \\cdot w_Q)\n",
+    "$$\n",
     "\n",
     "Here, $k$ = creep factor and $\\psi_2$ = quasi-permanent load factor.\n",
     "\n",
@@ -277,35 +300,49 @@
     "\n",
     "The factor $\\psi_2$ depends on the building function. In the Loads section, the factors for all building functions are provided. For offices and residential buildings, $\\psi_2 = 0.3$. The factor $k$ depends on the material. In the Material Properties section, the factors for different materials are given. Steel has a creep factor $k = 0$ and thus $w_{kr} = 0$. For wood, $k = 0.8$ (climate class 2), making:\n",
     "\n",
-    "$w_{kr} = 0.8 \\cdot (w_G + 0.3 \\cdot w_Q)$\n",
+    "$$\n",
+    "w_{kr} = 0.8 \\cdot (w_G + 0.3 \\cdot w_Q)\n",
+    "$$\n",
     "\n",
     "In reinforced concrete, deflection is increased not only by creep but also by cracking in the tension zone of the concrete. The calculation of this is quite complex and exceeds the scope of this guide. A reasonable approximation for dry concrete is obtained with a creep factor $k$ = 3, making:\n",
     "\n",
-    "$w_{kr} = 3 \\cdot (w_G + 0.3 \\cdot w_Q)$\n",
+    "$$\n",
+    "w_{kr} = 3 \\cdot (w_G + 0.3 \\cdot w_Q)\n",
+    "$$\n",
     "\n",
     "In steel, the modulus of elasticity is independent of the strength class. In wood, it depends not only on the strength class but also on the fibre direction and the limit state. For the deflection of a wooden beam, we must use $E_{0,mean}$, and for laminated beams, $E_{0,gl,mean}$ (see Material Properties Wood). In concrete, the modulus of elasticity depends on the strength class and the limit state. For deflection (SLS), we must use the value for $E_{cm}$ (see the section Material Properties Concrete).\n",
     "\n",
     "For a floor beam, the general requirement is:\n",
     "\n",
-    "$w_{inf} \\leq w_{inf;norm} = 0.003 \\times l$\n",
+    "$$\n",
+    "w_{inf} \\leq w_{inf;norm} = 0.003 \\times l\n",
+    "$$\n",
     "\n",
     "If the beam is located near a wall or in the facade, then:\n",
     "\n",
-    "$w_{inf} \\leq w_{inf;norm} = 0.002 \\cdot l$\n",
+    "$$\n",
+    "w_{inf} \\leq w_{inf;norm} = 0.002 \\cdot l\n",
+    "$$\n",
     "\n",
     "The unity check thus becomes:\n",
     "\n",
-    "$U.C. = \\dfrac{w_{inf}}{w_{inf,norm}} \\leq 1.0$\n",
+    "$$\n",
+    "U.C. = \\dfrac{w_{inf}}{w_{inf,norm}} \\leq 1.0\n",
+    "$$\n",
     "\n",
     "If the U.C. $>$ 1, a heavier profile must be chosen. For the required moment of inertia $I_{necessary}$ of the new profile, the following applies:\n",
     "\n",
-    "$I_{necessary} = \\text{U.C.} \\cdot I_{oud}$\n",
+    "$$\n",
+    "I_{necessary} = \\text{U.C.} \\cdot I_{oud}\n",
+    "$$\n",
     "\n",
     "The formulas for $W_{necessary}$ and $I_{necessary}$ can also be used for both ULS and SLS if the U.C. $<<$ 1. A slimmer, thus cheaper and more sustainable profile can suffice. The larger of the two values of U.C. is then obviously the starting point.\n",
     "\n",
     "We also note that for the maximum deflection of a floor:\n",
     "\n",
-    "$u_{max} \\leq 0.004 \\cdot l$\n",
+    "$$\n",
+    "u_{max} \\leq 0.004 \\cdot l\n",
+    "$$\n",
     "\n",
     "For a roof beam, both $w_{inf}$ and $w_{fin}$ must be less than $0.004 \\cdot l$.\n",
     "\n",
@@ -335,8 +372,7 @@
     "$W_y = U.C. \\cdot W_{y,oud} = 0.7 \\cdot 1479 \\cdot 10^3 [mm^3] = 1035 \\cdot 10^3 [mm^3]$\n",
     "\n",
     "A HE300A strength class S355 meets both requirements and will be used. This profile has a weight of 0.88 [kN/m].\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
+    "\n",
     "```\n",
     "\n",
     "````{margin}\n",
