--- a/book/calculation_examples/steel/truss_beam.ipynb
+++ b/book/calculation_examples/steel/truss_beam.ipynb
@@ -11,6 +11,9 @@
     "A truss beam is composed of multiple triangles side by side, forming a rigid whole. Truss beams distinguish between chord members (blue) and web members (red). Chord members include the top and bottom chords and usually vertical end posts. The web members consist of diagonals and often vertical posts. Two patterns are distinguished: N-trusses and V-trusses. In N-trusses, we further distinguish between trusses with descending and ascending diagonals. V-trusses may also include vertical posts.\n",
     "\n",
     "```{figure} ../concrete/Images/Truss.jpg\n",
+    "---\n",
+    "scale: 20%\n",
+    "---\n",
     "```\n",
     "\n",
     "The nodes of a truss are essentially hinged together. Consequently, no moments can be transferred through the nodes, and the load must be transmitted as axial force. Therefore, the stresses in the members of the truss are primarily tensile and compressive stresses. In beams, these are mostly bending stresses. Bending generally results in high stresses and deformations, whereas axial forces produce much lower stresses and deformations.\n",
@@ -21,11 +24,19 @@
     "\n",
     "When designing a truss, profiles or weights can be assigned using estimation rules. The simplest way is to estimate the weight of the truss. Based on the total load on the truss, the following roughly estimated weights can be used:\n",
     "\n",
-    "$Roof truss: \\hspace{0.5cm} G_{eg} = 0.05 \\cdot G_{rb} + Q$\n",
+    "$$\n",
+    "Roof truss: \\hspace{0.5cm} G_{eg} = 0.05 \\cdot G_{rb} + Q\n",
+    "$$\n",
     "\n",
-    "$Floor truss: \\hspace{0.5cm} G_{eg} = 0.1 \\cdot G_{rb} + Q$\n",
+    "$$\n",
+    "Floor truss: \\hspace{0.5cm} G_{eg} = 0.1 \\cdot G_{rb} + Q\n",
+    "$$\n",
     "\n",
-    "The required profiles can then be calculated using the formula $A_{ben} = \\dfrac{F_{staaf;d}}{f_{t;d}}$.\n",
+    "The required profiles can then be calculated using the formula:\n",
+    "\n",
+    "$$\n",
+    "A_{ben} = \\dfrac{F_{staaf;d}}{f_{t;d}}\n",
+    "$$\n",
     "\n",
     "$f_{t;d}$ is the design value of the tensile strength. This is essentially equal to the design value of the compressive strength: $f_{c;d}$. However, for members subjected to compression, buckling must also be considered. Additionally, if the top chord carries roof or floor plates, it must also be checked for bending. The total stress is then the sum of $\\sigma_{c;d}$ and $\\sigma_{m;d}$, which must be less than $f_{c;d}$.\n",
     "\n",
@@ -38,6 +49,9 @@
     "Here we consider an N-truss with descending diagonals, which results in tensile forces in the diagonals, allowing them to be relatively slender. Suppose the truss is loaded at the centre by a point load $F$. The point load must be supported by the supports. The force is transmitted through the vertical and diagonal web members to the vertical end posts and then to both supports. At the supports, a vertical reaction force equal to $\\frac{1}{2}F$ occurs.\n",
     "\n",
     "```{figure} ../concrete/Images/Truss_Point_Load.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```\n",
     "\n",
     "The vertical members, disregarding the self-weight, all bear the same load. Considering the vertical equilibrium at the supports, it is easy to see that the member force equals the support reaction force: $F_{verticaal} = \\frac{1}{2}F$.\n",
@@ -45,20 +59,30 @@
     "The diagonals must also bear the same load. Considering the vertical equilibrium at the left upper joint, the vertical component of the diagonal member force equals $\\frac{1}{2}F$.\n",
     "\n",
     "```{figure} ../concrete/Images/Truss_Corner_Load.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```\n",
     "\n",
     "In this truss, the panels are square. Therefore, the diagonals run at a 45° angle. Using the Pythagorean theorem, it is easy to determine that the member force in the diagonal is equal to:\n",
     "\n",
-    "$F_{diagonaal} = \\sqrt{\\left(\\frac{1}{2}F\\right)^2 + \\left(\\frac{1}{2}F\\right)^2} = \\frac{1}{2}\\sqrt{2}\\cdot F$\n",
+    "$$\n",
+    "F_{diagonaal} = \\sqrt{\\left(\\frac{1}{2}F\\right)^2 + \\left(\\frac{1}{2}F\\right)^2} = \\frac{1}{2}\\sqrt{2}\\cdot F\n",
+    "$$\n",
     "\n",
     "The top and bottom chord members are most heavily loaded in the middle. For designing the truss, these members are therefore the most relevant. Similar to a beam, the external moment due to the load on the truss must also be determined. For a truss on two supports with a point load in the middle, the following applies: $M_{uitw} = \\frac{1}{4} F\\cdot l_{vw}$.\n",
     "\n",
     "```{figure} ../concrete/Images/Truss_Support_Reactions.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```\n",
     "\n",
     "For equilibrium, the external moment must be equal to the internal moment: $M_{uitw.} = M_{inw.}$. The internal moment here is equal to the couple of the forces in the top and bottom chords. These forces, due to equilibrium, are equal in magnitude but opposite in direction: compression in the top chord and tension in the bottom chord. Now, $M_{inw.} = F_{staaf} \\cdot h$, where $h$ is the height of the truss. The member force then becomes:\n",
     "\n",
-    "$F_{staaf} = \\frac{1}{4} \\dfrac{F \\cdot l_{vw}}{h}$\n",
+    "$$\n",
+    "F_{staaf} = \\frac{1}{4} \\dfrac{F \\cdot l_{vw}}{h}\n",
+    "$$\n",
     "\n",
     "It is evident that the larger the truss height, the smaller the forces in the top and bottom chords.\n",
     "\n",
@@ -69,13 +93,20 @@
     "\n",
     "With a total load equal to $q\\cdot l_{vw}$, the reaction force $R_A=\\frac{1}{2}\\cdot q\\cdot l_{vw}$. This is also the magnitude of the compressive force in the end post and the vertical component of the tensile force in the diagonal in the end field of a truss with descending diagonals. For the maximum moment of a truss beam loaded by a uniformly distributed load, the following applies:\n",
     "\n",
-    "$M_v = \\frac{1}{8}\\cdot q \\cdot l_{vw}^2$.\n",
+    "$$\n",
+    "M_v = \\frac{1}{8}\\cdot q \\cdot l_{vw}^2\n",
+    "$$\n",
     "\n",
     "This is the external moment. The internal and external moments must be equal. The internal moment equals the member force times the truss height:\n",
     "\n",
-    "$M_{inw.} = F_{orm} \\cdot h = F_{brm} \\cdot h = M_v \\rightarrow F_{orm} = F_{brm} = \\frac{\\frac{1}{8} q \\cdot l_{vw}^2} {h}$\n",
+    "$$\n",
+    "M_{inw.} = F_{orm} \\cdot h = F_{brm} \\cdot h = M_v \\rightarrow F_{orm} = F_{brm} = \\frac{\\frac{1}{8} q \\cdot l_{vw}^2} {h}\n",
+    "$$\n",
     "\n",
     "```{figure} ../concrete/Images/Truss_Support_Reactions_Distributed_Load.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```\n",
     "\n",
     "The member force in the end post at support A is equal to the reaction force of the support: $\\frac{1}{2}ql_{vw}$. For the diagonal force in the end field, we need to again consider the vertical equilibrium at the upper joint near A. Note that half of the distributed load q in the end field is directly transferred to the left upper joint and not through the diagonal. Therefore, the vertical component of the end diagonal is smaller than $\\frac{1}{2}ql_{vw}$. Refer to the subsequent sections for further elaboration.\n",
@@ -97,6 +128,9 @@
     "In a building with office functions on the 1st and 2nd floors, a large column-free space is desired on the ground floor. Therefore, storey-height truss beams are installed with a length of 36 meters and a height of 4 meters, simultaneously supporting the two floors. Some joints support a secondary floor beam. These secondary floor beams (HEA profiles) have a clear span of 10 meters. They support a steel plate concrete floor (floor thickness 225 mm) with a finishing layer, pipes, and a ceiling. The steel plates span 6 meters.\n",
     "\n",
     "```{figure} ../concrete/Images/Truss_Load_Bearing.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```\n",
     "\n",
     "````{margin}\n",
@@ -162,8 +196,7 @@
     "This force $\\mathsf{F_d}$ acts as a point load on the truss, both on the top and bottom chords. The reaction due to these joint loads for two floors then becomes:\n",
     "\n",
     "$\\mathsf{2 \\cdot (\\frac{1}{2}F_d + F_d + F_d + \\frac{1}{2} F_d) = 6 F_d \\cdot R_A = 6 \\cdot 718\\ kN = 4309\\ kN}$.\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
+    "\n",
     "```\n",
     "\n",
     "````{margin}\n",
@@ -177,6 +210,11 @@
     "```\n",
     "````\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
