--- a/book/design/foundations/foundation_methods_1.ipynb
+++ b/book/design/foundations/foundation_methods_1.ipynb
@@ -6,17 +6,18 @@
    "source": [
     "# Foundation methods 1, slab foundations\n",
     "\n",
-    "## Considerations\n",
-    "\n",
+    "```{note}\n",
     "Most information is taken from Vroom [^1] and Walinco [^2].\n",
+    "```\n",
     "\n",
-    "### Settlements\n",
+    "\n",
+    "## Settlements\n",
     "Settlements of a slab foundation are only comparable to settlements of a pile foundation (around 5 mm) if below the foundation depth only sand layers occur. If this is the \n",
     "case, a bearing capacity of 50 kN/m2 may be assumed. A calculation is unnecessary. Greater bearing capacities are possible but must always be verified with a calculation. \n",
     "\n",
     "However, especially in the Netherlands, often layers of clay and peat are present. These soil types are 50 to 100 times more compressible than sand layers, and will therefore cause greater settlements.\n",
     "\n",
-    "### Soil improvement\n",
+    "## Soil improvement\n",
     "Dutch soil highly compressible layers often occur just below ground level. Removing this layer and replacing them with sand may enable a slab foundation to be used. It has \n",
     "been shown in practice that using a soil improvement reaching below the ground water table tends to be more expensive than a pile foundation. This can already be the case with soil soil improvement improvements to a depth of 1 m.\n",
     "\n",
